代码重构/内容添加/本地化修正 -重构了IF线战败事件的结构 -增加了HNA,YUN和COX的部分战败结语 -重构了部分GFX文件结构 -更改了部分科技树配图 -为IF线战败内容部分领导人增加了本地化 -增加了XBJ GUI顶部警告的图标 -修正了部分国家的经济类型

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -267,7 +267,7 @@
 
   #NCC
   NCC_xu_liang:0"徐良"
-  NCC_xu_liang_desc:0"徐良永远也不会想到，自己有一天居然能成为中华民国的真正掌权者，自从张作霖离开北京以来，中华民国的权力中心终于在一次回到了华北。自1941年以来，徐良就是改组政府中华北势力的最高代表，始终与权力中心保持着密切联系。这种联系与其说是中央给予的嘉奖，不如说是对华北派的怜悯。从那之后，往日里繁荣的北平一天天消沉下去，从旧日里权力的中心变成了华北的一个不重要的城市。“那是中国以前的首都”人们如此评论道。而南京和上海，作为新的经济政治中心慢慢吸引了越来越多的人。徐良将这一切视作对华北的抛弃。但是现在，再造民国的机会就在他眼前，他有机会将权力的中心再次回到华北。当然徐良也清楚，如果战争打输了，自己也难逃一死。不过整个共荣圈都已经全面介入了，还能有什么问题呢？"
+  NCC_xu_liang_desc:0"徐良永远也不会想到，自己有一天居然能成为中华民国的真正掌权者，自从张作霖离开北京以来，中华民国的权力中心终于在一次回到了华北。自1941年以来，徐良就是改组政府中华北势力的最高代表，始终与权力中心保持着密切联系。这种联系与其说是中央给予的嘉奖，不如说是对华北派的怜悯。从那之后，往日里繁荣的北平一天天消沉下去，从旧日里权力的中心变成了华北的一个不重要的城市。“那是中国以前的首都”人们如此评论道。而南京和上海，作为新的经济政治中心慢慢吸引了越来越多的人。徐良将这一切视作对华北的抛弃。但是现在，再造民国的机会就在他眼前，他有机会将权力的中心再次回到华北。\n\n当然,徐良自然清楚，如果战争打输了，自己也难逃一死。不过有自己的日本主子在背后全力撑腰，还能有什么问题呢？"
   SHX_occupied_ultranationalism_party_long:"华北第20军"
   SHX_occupied_ultranationalism_party:"华北第20军"
   SHX_Okiie_Usami:"宇佐美兴屋"
@@ -298,6 +298,8 @@
 
   MEA_communist_party_long:0"蒙古人民阵线"
   MEA_communist_party:0"蒙古人民阵线"
+
+  maintheme:1 "主题曲 - 英雄赞歌"
 
   ##顶端警报
   Alert_XBJ_Work_Group_Avaliable: "有可用§Y工作组§!"
