--- a/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
@@ -7,15 +7,20 @@
  TNO_PEACE_POPUP_WAR_LFB_GAW_GNG: "§e帝国主义§!用中国人民的血肉塑造的[GNG.GetFlag]§r畸形怪物§!已被中国人民的铁拳砸得粉碎，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_MAN: "自命高贵的[MAN.GetFlag]§O傀儡§!从人民的尸骨所砌成的王座上跌落，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_JAP: "[JAP.GetFlag]§e旭日§!东落，§x中华§!§z民族§!的§e百年国耻§!终得洗雪。"
-
+ TNO_PEACE_POPUP_WAR_LFB_GAW_HNA: "又一颗孤悬海外的[HNA.GetFlag]§e明珠§!重回了§x中§!§z国§!的怀抱，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_COX: "[JAP.GetFlag]§e旭日§!的光辉再一次让[COX.GetFlag]§x红星§!黯然失色，§x中华§!§z民族§!寻求自由的梦想终究还是破灭了。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_YUN: "[JAP.GetFlag]§e旭日§!的光辉再一次让[YUN.GetFlag]§r血日§!黯然失色，§x中华§!§z民族§!寻求自由的梦想终究还是破灭了。"
  TNO_PEACE_POPUP_WAR_LFB_IF_TIB: "新生的[COX.GetFlag]§x红日§!融化了千年的[TIB.GetFlag]§d冰雪§!，白雪之下的茵茵绿草终于迎来了光明。"
+ TNO_PEACE_POPUP_WAR_LFB_2CCW_COX: "在决定§z新中国§!命运的理念之争中，[YUN.GetFlag]§z白日§!碾碎了[COX.GetFlag]§x镰锤§!。"
+ TNO_PEACE_POPUP_WAR_LFB_2CCW_YUN: "在决定§x新中国§!命运的理念之争中，[COX.GetFlag]§x镰锤§!击碎了[YUN.GetFlag]§z白日§!。"
 ###配文###
  TNO_PEACE_POPUP_FLAVOR_LFB_XIN: "腐朽统治已被颠覆，热土将生长出革命新花。"
  TNO_PEACE_POPUP_FLAVOR_LFB_GAW_COX: "然而前程并非轻易如愿，因吾辈身负世间诸难。"
  TNO_PEACE_POPUP_FLAVOR_LFB_GAW_CHI: "教尔作人不作人，教尔不苟竟狗苟。而今俯首尔就擒，仍自教尔分人狗。"
  TNO_PEACE_POPUP_FLAVOR_LFB_GAW_JAP: "翻山倒海寻常事，今日愚公天下多。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_HNA:  "母亲呀，你千万不该抛弃了我！"
+ TNO_PEACE_POPUP_FLAVOR_LFB_2CCW_COX: "为革命而奋斗，为革命而牺牲，死固无恨。"
+ TNO_PEACE_POPUP_FLAVOR_LFB_2CCW_YUN: "被压迫的中国全体民众，乃一切中国问题的主宰。"
  #以下内容来自群友“老大哥在看着你”，感谢他的贡献
  #TNO_PEACE_POPUP_FLAVOR_东突: "假若我降下一个天神，我必使他变成一个人样，我必使他们陷于自己所作的蒙蔽之中。"
  #TNO_PEACE_POPUP_FLAVOR_SHX: "红缨缨大马你骑上走，妹妹送你到村口口；三年呀五载你要回家转，莫让妹妹等得愁。"
