西北小蒋名称本地化

--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -1,5 +1,6 @@
 ﻿l_simp_chinese:
 COX: "中国旅旅部"
+COX: "中国旅旅部"
 COX_ADJ: "中国旅"
 COX_DEF: "近卫步兵第八十八旅旅部"
 COX_sik: "新疆苏维埃边区"
@@ -42,58 +43,51 @@ XIK_KIX_DEF:"西康省"
 XIN: "新疆执政府"
 XIN_ADJ:"新疆执政府"
 XIN_DEF:"新疆执政府"
-XIN_communist_party: "中国共产党 - 强硬派"
-XIN_communist_party_long: "中国共产党 - 强硬派(CPC - Hardliners)"
-XIN_socialist_party: "新盟"
-XIN_socialist_party_long: "新盟(Xinmeng)"
-XIN_fascism_party: "日本顾问团"
-XIN_fascism_party_long: "日本顾问团（Japanese Merchant Group）"
+XIN_communist_party: "中国共产党 - 新疆局"
+XIN_communist_party_long: "中国共产党 - 新疆局"
+XIN_socialist_party: "新疆保卫和平民主同盟"
+XIN_socialist_party_long: "新疆保卫和平民主同盟"
 XIN_despotism_party: "六大政策党"
 XIN_despotism_party_long: "六大政策党(SPP)"
+XIN_fascism_party: "日本顾问团"
+XIN_fascism_party_long: "日本顾问团（Japanese Merchant Group）"
 
 XBJ: "中共西北局"
 XBJ_ADJ: "中共西北局"
 XBJ_DEF: "中共西北局"
+XBJ_Jiang_Jingguo: "蒋经国 "
 XBJ_communist_party: "中国共产党 - 西北局"
 XBJ_communist_party_long: "中国共产党 - 西北局"
 XBJ_socialist_party: "中国共产党 - 西北局"
 XBJ_socialist_party_long: "中国共产党 - 西北局"
 XBJ_despotism_party: "宁系马家"
-XBJ_liberal_conservatism_party: "国民党行政公署"
-XBJ_liberalism_party: "国民党知识分子"
-XBJ_NRA: "国民革命军残部"
-XBJ_NRA_long: "国民革命军残部"
+XBJ_NRA: "国民革命军西北新一师"
+XBJ_NRA_long: "国民革命军西北新编第一师"
 
 HNA: "海南军政监"
 HNA_DEF: "海南军政监"
 HNA_ADJ: "海南军政监"
 HNA_futianliangsan: "福田良三"
-HNA_despotism_party: "帝国海南军政部"
-HNA_communist_party: "琼崖讨逆纵队"
-HNA_liberalism_party: "中国民主同盟（海南分部）"
 HNA_ultranationalism_party: "华南方面军"
+HNA_despotism_party: "帝国海南军政部"
+HNA_liberalism_party: "中国民主同盟"
+HNA_communist_party: "琼崖讨逆纵队"
 
 XNJ: "西南中共中央"
 XNJ_DEF: "西南中共中央"
 XNJ_ADJ: "西南中共中央"
-XNJ_communist_party: "中国共产党 - 西南局"
-XNJ_socialist_party: "中国共产党 - 西南局"
-XNJ_communism: "西南局"
-XNJ_communism_DEF: "中国共产党西南局"
-
-QIN: "西北共治政府"
-QIN_DEF: "西北共治政府"
-QIN_ADJ:"西北共治政府"
+XNJ_communist_party: "中国共产党"
+XNJ_socialist_party: "工农运动"
 
 XPC: "伊犁河谷垦荒兵团"
 XPC_ADJ: "伊犁河谷垦荒兵团"
 XPC_DEF: "伊犁河谷垦荒兵团"
+XPC_ultranationalism_party: "维吾尔兄弟会"
+XPC_ultranationalism_party_long: "维吾尔兄弟会"
 XPC_paternalism_party: "伊犁建设兵团"
 XPC_paternalism_party_long: "伊犁建设兵团"
 XPC_communist_party: "中国共产党 - 新疆局"
 XPC_communist_party_long: "中国共产党 - 新疆局"
-XPC_ultranationalism_party: "维吾尔兄弟会"
-XPC_ultranationalism_party_long: "维吾尔兄弟会"
 Construction_Corps:0 "建设兵团"
 pup_difangju:0 "地方局"
 
