微调部分政党名称

--- a/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
@@ -12,16 +12,20 @@
  CHI_dog_despotism_party_long: "中国国民党 - 新中央俱乐部"
  NCC_dog_fascism_party: "国民党 - 华北政务委员会"
  NCC_dog_fascism_party_long: "中国国民党 - 华北政务委员会"
- YUN_dog_despotism_party: "国民党 - 黄埔系"
- YUN_dog_despotism_party_long: "中国国民党 - 黄埔系"
- YUN_dog_paternalism_party: "国民党 - 政学系"
- YUN_dog_paternalism_party_long: "中国国民党 - 政学系"
- SIC_ultranationalism_party: "日军"
- SIC_ultranationalism_party_long: "大日本帝国陆军"
- SIC_paternalism_party: "国民党 - 川系"
- SIC_paternalism_party_long: "中国国民党 - 川系"
+ YUN_JAP_ultranationalism_party: "护国军残部"
+ YUN_JAP_ultranationalism_party_long: "中华民国护国军残部"
+ YUN_JAP_despotism_party: "国军残部"
+ YUN_JAP_despotism_party_long: "国民革命军残部"
+ YUN_JAP_paternalism_party: "国军残部"
+ YUN_JAP_paternalism_party_long: "国民革命军残部"
+ YUN_JAP_communist_party: "中共地下党"
+ YUN_JAP_communist_party_long: "中共中央南方局"
+ SIC_ultranationalism_party: "护国军残部"
+ SIC_ultranationalism_party_long: "中华民国护国军残部"
+ SIC_paternalism_party: "国军残部"
+ SIC_paternalism_party_long: "国民革命军残部"
  SIC_communist_party: "中共地下党"
- SIC_communist_party_long: "中共中央南方局"
+ SIC_communist_party_long: "中共四川省委"
  COX_Wang_Zhen_desc: "“老骥伏枥”\n--------------\n革命再兴，革命陨落，期间不过数年岁月，尚不足以令雏鹰翱翔天际，却蹉跎了老骥的意志。但当社稷化为殷墟，希望早已泯灭之时，唯有一人横刀立马，伫立在北疆门户，捍卫着革命仅存的硕果。\n\n自1927年入党之时，王震就一直奋战在革命的前线，从赣南到陕北，从国民党到日本帝国主义——对待内外反⾰命之时，他从不心慈手软。在新疆苏维埃成立后，这匹刚烈的老马又怀着澎湃的激情，一手操持根据地的保卫工作。在他主导下，反革命的企图被挫败，无数妄想复辟的狂徒被就地正法。革命大潮之中，他就是那根中流砥柱。\n\n在第二次抗战陷入劣势之时，新疆各地的反革命又开始蠢蠢欲动起来。尽管人手不足，装备短缺，政治保卫局仍拼尽全力维系根据地的稳定。然而，随着苏区基层赖以生存的赤卫队在战争中消耗殆尽，封建势力迅速地在南疆卷土重来……在最后的时日里，日本轰炸了乌鲁木齐，几乎将之化为白地，新疆叛乱四起，群寇云集，党支离破碎…仅剩的革命者汇聚在北疆，在政治保卫局的组织下，恢复了群众基础深厚的北疆的稳定。\n\n在这场灾难中，党多年的经营毁于一旦。土改的成果被推翻，无数革命者献出了生命……但这还远未结束，只要一息尚存，这匹年迈的骏马就要付出一切，与反革命拼个你死我活。"
  QIN_Ma_Dunjing_desc: "青海的群山峻岭间，如今群狼环伺。曾经的繁荣如过眼云烟，此地唯余仇恨。\n\n当日寇第一次踏上西北大地时，血仇便已铸成——他们夺去了无数人的父子兄弟，更将数代人的劳作化为一片焦土。危难之中，马惇靖将责任担在肩头，他不惜与共产党人合作，只为捍卫青海人民的安宁。日本人确实在一开始被挡住了，但随之而来的，是共产党人雄心勃勃的全面战争，与紧随其后的惨败。当失败无可避免之时，马惇靖率部脱离了红军战斗序列，潜入了青海的崇山峻岭之中。\n\n与共产党人的合作，是彻头彻尾的错误——他们的好高骛远，就将西北数十年可贵的和平彻底葬送。但日本人与其汉人走狗就更加可恶，他们不惜屠杀九十九人，只为令那最后一人屈服。然而西北的脊梁岂能如此简单地被压弯？利用对地形的熟悉，马惇靖的部队就不断打击着敌军深入青海境内的薄弱处，又在敌人反应过来前敏锐地退走，宛若山中群狼——这样的消耗或许无法在短时间内使日本改变将青海收入囊中的企图，但马惇靖坚信，只要有决心与坚定的意志，就一定能将日寇彻底逐出故乡。"
  Fujita_Shigeru: "藤田茂"
