BUG修复 -修复了华北GUI部分图标无法正常显示的问题

--- a/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
@@ -168,10 +168,10 @@ COX_GAW_GUI_Area_selected_8: "§W青岛§!"
 COX_GAW_GUI_Area_selected_9: "§W威海卫§!"
 COX_GAW_GUI_Area_selected_10: "§W大连§!"
 
-COX_huabei_zhengzhou: "§Y郑州§! [Get_COX_GAW_GUI_City_S_Fort]\n--------------\n\n\n£GFX_Zhengzhou_tt_pic \n\n\n\n中华文明的发源地早已被侵略者及其走狗所玷污。日寇和保卫团的刺刀总是蒙着一层粘稠的暗红，城中蜿蜒的河流则堆满了反抗者和无辜者的尸首。就连黄河也被这血色染红，于是她咆哮着从远方召来了复仇的浪潮。"
-COX_huabei_peking: "§Y北京§! [Get_COX_GAW_GUI_City_N_Fort]\n--------------\n\n\n£GFX_Beijing_tt_pic \n\n\n\n如果你偶然抬头看见古城墙上覆盖的青苔，也许会感慨封建王朝的兴盛衰亡，但当你看到天安门时，就只剩下惊叹。如今，门楼和城墙上的机枪与耸立在大地上的格格不入的碉堡，无一不显示着日本对于中国北方政治经济中心的统治。"
-COX_huabei_jinan: "§Y济南§! [Get_COX_GAW_GUI_City_S_Fort]\n--------------\n\n\n£GFX_Jinan_tt_pic \n\n\n\n作为日本华北派遣军的总部，济南被打造成了一座难以企及的堡垒。从空中的巡逻飞机到黄河上的炮艇，城中的每个角落都密布着杀意。然而，一旦这座城市落入抗日力量手中，不多时解放的红旗就会飘扬在黄海的岸旁。"
-COX_huabei_taiyuan: "§Y太原§! [Get_COX_GAW_GUI_City_N_Fort]\n--------------\n\n\n£GFX_Taiyuan_tt_pic \n\n\n\n拨开层层叠叠的铁丝网，往日当地军阀留下的兵工厂此刻正不分日夜地运转，将这片土地的血液锻造成钢与火，以阻挡抗日势力进军华北平原的步伐。晋阳之地曾见证了无数王朝的迭起兴衰，而现在它将见证中华大地的命运。"
+COX_huabei_zhengzhou: "§Y郑州§! [Get_COX_GAW_GUI_City_S_Fort]\n--------------\n\n\n£Zhengzhou_tt_pic \n\n\n\n中华文明的发源地早已被侵略者及其走狗所玷污。日寇和保卫团的刺刀总是蒙着一层粘稠的暗红，城中蜿蜒的河流则堆满了反抗者和无辜者的尸首。就连黄河也被这血色染红，于是她咆哮着从远方召来了复仇的浪潮。"
+COX_huabei_peking: "§Y北京§! [Get_COX_GAW_GUI_City_N_Fort]\n--------------\n\n\n£Beijing_tt_pic \n\n\n\n如果你偶然抬头看见古城墙上覆盖的青苔，也许会感慨封建王朝的兴盛衰亡，但当你看到天安门时，就只剩下惊叹。如今，门楼和城墙上的机枪与耸立在大地上的格格不入的碉堡，无一不显示着日本对于中国北方政治经济中心的统治。"
+COX_huabei_jinan: "§Y济南§! [Get_COX_GAW_GUI_City_S_Fort]\n--------------\n\n\n£Jinan_tt_pic \n\n\n\n作为日本华北派遣军的总部，济南被打造成了一座难以企及的堡垒。从空中的巡逻飞机到黄河上的炮艇，城中的每个角落都密布着杀意。然而，一旦这座城市落入抗日力量手中，不多时解放的红旗就会飘扬在黄海的岸旁。"
+COX_huabei_taiyuan: "§Y太原§! [Get_COX_GAW_GUI_City_N_Fort]\n--------------\n\n\n£Taiyuan_tt_pic \n\n\n\n拨开层层叠叠的铁丝网，往日当地军阀留下的兵工厂此刻正不分日夜地运转，将这片土地的血液锻造成钢与火，以阻挡抗日势力进军华北平原的步伐。晋阳之地曾见证了无数王朝的迭起兴衰，而现在它将见证中华大地的命运。"
 COX_GAW_GUI_City_Fort_no: ""
 COX_GAW_GUI_City_Fort_yes: "\n§R该城市已筑垒！§!"
 COX_GAW_GUI_Region_selected_1: "华北区域"
@@ -187,7 +187,7 @@ COX_GAW_GUI_Chaos_Stage_Region2_1: "§Y1§!：§R骚动§!"
 COX_GAW_GUI_Chaos_Stage_Region2_2: "§Y2§!：§R起义§!"
 COX_GAW_GUI_Chaos_Stage_Region2_3: "§Y3§!：§R大动乱§!\n\n如果不能降低§R混乱度§!等级，我们会在战后§R失去§!这一区域内所有地区的控制！"
 COX_GAW_GUI_Advantage_Desc: "我们在当前区域的§G优势度§!为：§Y[?COX_GAW_GUI_Advantage_Display_Raw]%§!\n当前的§G优势度等级§!为：§Y[?COX_GAW_GUI_Advantage_Stage]§!"
-COX_GAW_GUI_Main_tip_tt: "关山§x飞渡§!\n--------------\n\n\n£GFX_United_Front_tt_pic \n\n\n\n随着第三次£COX_XBJ_text £NPA_text §V抗日民族§!§z统一战线§!的正式成立，红军吹响了§C解放全中国§!的号角，正式向£North_China_text §r华北§!、£Manchuria_text §O东北§!地区进军。但与此同时，在护国战争愈演愈烈后，£IJA_text §j日寇§!也在紧锣密鼓地做着防御准备，他们现在正在紧急进行£North_China_text §r“华北绝对防御圈”§!的修筑，同时也在东北地区筹备着£Manchuria_text §O“满洲决死守备圈”§!的建立，力求阻碍£COX_XBJ_text £NPA_text §m中华民族§!夺取自由的脚步。随着时间的推移，£IJA_text §j日寇§!所修筑的防线会愈来愈坚固，我们进攻的代价会不断上升，直至完全§V无法推进战线§!。\n\n在解放£North_China_text §r华北§!、£Manchuria_text §O东北§!的过程中，我们并非只能依赖正面战场上作战的的£COX_XBJ_text §V红军§!。§S群众路线§!一直都是我党的§Y优良传统§!，充分与§S日占区群众§!结合的敌后工作无疑能够对§A日军防御工事§!的修筑予以重大打击，我们需要紧紧依靠敌占区的群众，将整个华北地区都开辟为我们的敌后战场，§A破坏防御工事§!的修筑工作，为我们的£COX_XBJ_text §V红军战士§!们的进军铺平道路。\n\n§G“疏枝立寒窗，笑在百花前。奈何笑容难为久，春来反凋残。残固不堪残，何须自寻烦？花落自有花开日，蓄芳待来年。”§!"
+COX_GAW_GUI_Main_tip_tt: "关山§x飞渡§!\n--------------\n\n\n£United_Front_tt_pic \n\n\n\n随着第三次£COX_XBJ_text £NPA_text §V抗日民族§!§z统一战线§!的正式成立，红军吹响了§C解放全中国§!的号角，正式向£North_China_text §r华北§!、£Manchuria_text §O东北§!地区进军。但与此同时，在护国战争愈演愈烈后，£IJA_text §j日寇§!也在紧锣密鼓地做着防御准备，他们现在正在紧急进行£North_China_text §r“华北绝对防御圈”§!的修筑，同时也在东北地区筹备着£Manchuria_text §O“满洲决死守备圈”§!的建立，力求阻碍£COX_XBJ_text £NPA_text §m中华民族§!夺取自由的脚步。随着时间的推移，£IJA_text §j日寇§!所修筑的防线会愈来愈坚固，我们进攻的代价会不断上升，直至完全§V无法推进战线§!。\n\n在解放£North_China_text §r华北§!、£Manchuria_text §O东北§!的过程中，我们并非只能依赖正面战场上作战的的£COX_XBJ_text §V红军§!。§S群众路线§!一直都是我党的§Y优良传统§!，充分与§S日占区群众§!结合的敌后工作无疑能够对§A日军防御工事§!的修筑予以重大打击，我们需要紧紧依靠敌占区的群众，将整个华北地区都开辟为我们的敌后战场，§A破坏防御工事§!的修筑工作，为我们的£COX_XBJ_text §V红军战士§!们的进军铺平道路。\n\n§G“疏枝立寒窗，笑在百花前。奈何笑容难为久，春来反凋残。残固不堪残，何须自寻烦？花落自有花开日，蓄芳待来年。”§!"
 COX_GAW_GUI_Progress_tip_tt: "§W在护国战争愈演愈烈后，§!§V民族革命§!的号角已经吹响，£North_China_text §r华北§!£Manchuria_text §O东北§!各地人心浮动，到处都是聚众揭竿而起的武装。尽管£IJA_text §j日军§!在第一时间对城市地区进行了军管，但仍无法阻止混乱在§G农村地区§!如烈火般蔓延。\n\n£Chaos_text §R混乱度§!表示一个地区的混乱程度，£Chaos_text §R混乱度§!越高，£IJA_text §j日军§!就必须花费更多精力在§Y维稳§!之上，他们筑垒的速度也将§Y受到影响§!。我们的诸多行动都会影响这个数值，当£Chaos_text §R混乱度§!达到某个阈值时，我们便可以联络合作者，彻底破坏£IJA_text §j日军§!的筑垒企图，让他们陷入£COX_XBJ_text §V人民战争的汪洋大海！\n\n§!但必须注意的是，抗日武装本身良莠不齐，§Y过高的§!£Chaos_text §R混乱度§!§x意味着广大的权力真空§!，会给我们在§Y战后的接管工作§!造成§Y极大的麻烦§!，如果£Chaos_text §R混乱度§!§Y过高§!，我们很可能无法有效地§Y接管§!该地区。\n\n而£Advantage_text §G“优势度”§!则反映了我们民族解放事业的进展。当£North_China_text §r华北§!的解放区达到了§Y一定规模§!，我们就必须着手维护那里的稳定，恢复生产，动员那里的人民加入我们的事业。"
 COX_GAW_GUI_Current_Area_dummy: "当前选中地区:"
 COX_GAW_GUI_Enemy_Info_dummy: "§W敌军动向§!"
