内容优化/BUG修复 -修复了情报部门界面无法正常显示的问题 -为AI操纵的COX增加了部队锁

--- a/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
@@ -451,8 +451,10 @@
  COX.135.a:"不论东方发生了什么，我们都不能坐视不管。"
  COX.136.t:"紧急会议"
  COX.136.d:"£gezifu £gezifu 事态紧急，容不得半分拖沓——在接收到边境告急的消息后，驻留在迪化的干部们不约而同地做出了这样的判断。各自搬把椅子，将散乱的边境线报摊在桌上，不消小半个小时，表情凝重的干部们就围坐在一张长桌左右。\n\n£gezifu £gezifu “难民和袭击都在急剧增加……边境扛得住吗？”\n\n£gezifu £gezifu “很勉强，虽然我们已经采取了一些措施安置难民，保卫聚居地，但以现在冲击的强度来看，恐怕远远不够……”\n\n£gezifu £gezifu 即便是经受过土改锻炼的干部，也没办法在短时间内从繁杂凌乱的信息中梳理出青海此时的情况，更别说找出应对之策。一时间，整个会议陷入了轻微的混乱。\n\n£gezifu £gezifu “根据最近打探到的情报，马家军在东边和某个——也可能是某些——敌对武装交火。”坐在桌子靠墙一侧的刘少奇翻看着桌上的文件，一开口就给会议丢下一颗重磅炸弹，“马家在抗战中一直明哲保身，青海是抗战后全国较为安全的地区之一。但是现在从马家逃到我们新疆这里来的群众数量明显增加，这和我们以前的认知明显不符。”\n\n£gezifu £gezifu “有些最近逃难来的群众说马家军在和军队交火，也有的说马家军在和一伙到处烧杀的土匪打仗。另外，大部分人都提到马家军几个月前开始征收“战争税”，有个别人说那是为了“抗日”，但是不少人觉得那就是政府想了个新名目捞钱。”一位负责管理难民工作的干部补充。\n\n£gezifu £gezifu “很好，这个消息基本验证了我的猜测。”刘少奇胸有成竹地下了结论，“我认为马家军作战的对象大概率是日本人。”\n\n£gezifu £gezifu 会议的气氛顿时一沉，大家不约而同地想起二十多年前抗战的惨象：日本帝国主义铁蹄践踏、汉奸走狗的猖狂作乱、贫苦劳动者的哀嚎哭喊，无一不历历在目。\n\n£gezifu £gezifu “最近东部匪患加重，显然马家军已经无力清剿。这也证明对手实力不一般，需要马家军抽调大部分兵力去打仗，暂时无暇剿匪，这样才说得通。”刘少奇的手指在地图上在青海东边划了一圈。“首先排除土匪，没有任何土匪能和一地军头对抗而不落下风。然后排除南京国民政府，他们没有理由攻击马家。那么最后只剩下一个答案：日本人。”\n\n£gezifu £gezifu 干部们顿时低声讨论了起来，毛岸英隐约听到一两个声音表示不希望掺和马家的事。他思考良久，最终开口：“同志们静一静，听我说！”等会场基本安静下来，他才开始说：“自古以来，河西走廊就是通往新疆的要冲，如果放任那里陷入混乱，恐怕对根据地百害无益。最坏的情况，比如落入日本的掌控，那么新疆苏区就会暴露在日本帝国主义的面前，到时候革命前途难料。无论如何我们都必须干涉东部，最坏也要做好明天就打抗战的准备。”\n\n£gezifu £gezifu “我提议大家投票表决是否要干涉。”刘少奇说。\n\n£gezifu £gezifu 经过毛岸英一番话和一场短暂的辩论与问答，终于，几位原本对干涉持担忧态度的干部也转变了看法，干涉马家的决议得到全票通过。\n\n£gezifu £gezifu “现在局势尚不明朗，最好先派一个工作组去打探情况，也作一些准备。”刘少奇提议。\n\n£gezifu £gezifu “毛同志，这件事就交给我们这些老同志来办吧。”稍加思索，一旁的陈云站了起来，“和鬼子斗了二十多年，比这更恶劣的情况我们可没少见！”\n\n£gezifu £gezifu “也算我一个。”李先念也不甘落后，“我在西征的时候和马家军交过手，他们的秉性我都门儿清……”"
- COX.136.a:"祝工作组的同志们好运！（继续游玩边区）"
- COX.136.b:"与他们一道启程！（切换到西北局）（推荐）"
+ COX.136.a:"祝工作组的同志们好运！"
+ COX_136_a_tt:"以§V中共新疆局§!的视角继续游戏"
+ COX.136.b:"与他们一道启程！"
+ COX_136_b_tt:"以§V中共西北局§!的视角继续游戏"
  COX.137.t:""
  COX.137.d:"£gezifu £gezifu "
  COX.137.a:""
