平衡性调整/代码重构 -调整了部分本地化键值 -调整了第二次抗日战争东北阶段的部分数值

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -147,10 +147,10 @@
  LFBUG.201.desc: "“……国民党反动派排挤民主进步人士，其野心昭然若揭……”（占位）"
  LFBUG.201.a: "抛弃幻想，准备斗争！"
  LFBUG.202.t: "烽烟再起"
- LFBUG.202.desc: ""
+ LFBUG.202.desc: "（占位）"
  LFBUG.202.a: "先下手为强！"
  LFBUG.301.t: "革命得胜"
- LFBUG.301.desc: ""
+ LFBUG.301.desc: "（占位）"
  LFBUG.301.a: "人民万岁！"
  LFBUG.302.t: "结束动员戡乱状态"
  LFBUG.302.desc: "你的意思是，你专门搞崩了谈判，然后在内战开打以后tag到了YUN，然后帮烤馒头打赢了内战，就是为了看看有没有彩蛋？那你也挺牛逼的，我也没活整，就请你吃六个鸡蛋吧。"
