本地化修正/BUG修复/内容优化 -修复了山西GUI显示异常的问题 -修复了蒋经国作为西北局领袖未能正常显示的问题 -为IF线部分国策新增了工具提示 -修复了在大东亚战争完全胜利后东北部分地区非军事化的问题

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -68,6 +68,7 @@
  COX_Zhou_Enlai: "周恩来"
  COX_Song_Ziwen: "宋子文"
  COX_Sun_Fo: "孙科 "
+ COX_jiang_jingguo: "蒋经国 "
  Mao_Anying_2: "毛岸英 "
  COX_ye_jianying: "叶剑英 "
  COX_Provisional_Peoples_Goverment: "临时人民政府"
