--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -35,7 +35,6 @@
   Choe_Yong_Gon: "崔庸健"
   Kim_Chaek: "金策"
   Anti_Communist_Conference: "新疆反共联军会议"
-  Jiang_Jing_Guo: "蒋经国"
   COX_Su_yu: "粟裕"
   COX_Han_Xianchu: "韩先楚"
   COX_Chang_Qiankun: "常乾坤"
@@ -46,6 +45,7 @@
   XBJ_Liu_Shaoqi_desc: "在最低谷处为革命找寻生机，在最绝望的时候为全民族觅得希望，这便是刘少奇坚持至今的，属于共产党人的“党性”。他将自己的青春献给了大革命，将热血挥洒在抗日的战场，而他憔悴的晚年，则为了党的存续穷尽了一切——当战败已经注定之时，党不得不放弃了延安根据地，展开了前往西南的新长征，刘少奇自愿留在延安，维系共产党残破的地下党组织。\n\n陕北的斗争一日比一日艰苦，日军扫荡的压力与日俱增，他们的身前匍匐着汉奸党羽，他们手中拎着禁锢群众的锁链，党越来越无法在陕北辗转腾挪……在最危险的几个年份，党被分割包围在黄河两岸。为了保存火种，刘少奇只能率领残破的党向西北撤退……\n\n共产党的西行相当顺利，在顺利通过了山西与青海的军阀控制区之后，刘少奇幸运地在新疆找到了党组织。尽管盛世才政府愿意给共产党提供一席之地，但刘少奇很清楚军阀们首鼠两端的做派，所以当不可避免的背叛到来时，共产党已经做足了准备，最大程度地减少了损失。\n\n刘少奇经历过党最黑暗的时光，竭尽全力地拯救了危难中的党，这在他性格中留下了不可磨灭的印记。比起积极地发动群众，他更相信缜密的谋划与情报的运用，尽管采用更加实用主义的立场，但没有人能怀疑他对革命的忠诚。"
   Peng_Dehuai: "彭德怀"
   Ma_Dunjing: "马惇靖"
+  XBJ_Jiang_Jingguo: "蒋经国  "
   XBJ_Ma_Dunjing_hog_desc: "§Y政府首脑§!\n§Y军阀§!\n------------\n§L做派首鼠两端，立场摇摆不定——任何在乱世中割据一方的军阀都不约而同地总结出了这相同的生存哲学。得益于此，军阀们在某种程度上建立了形形色色的，还算稳定的政权。\n半个世纪悄然逝去，中华大地乱局如故，所以正如世界上的其他政权一样，他们也需要合格的接班人。军阀们通常会将自己相中的直系后代或家族中有前途的年轻人们早早地安插在部队中，给他们“参谋”，“师长”之类的职务，教导着这些人军阀的生存之道。\n马惇靖，便是这些年轻人中的佼佼者。\n他自幼熟读诗书，从小便懂得阿拉伯文，能根据大人的意思解经。在他父亲马鸿宾的部队中。他步步高升，从营职升到了团，旅，师……不到30岁，他就当上了81军的参谋长。在旁人看来，他不过是凭着父亲的权柄扶摇直上——虽然马惇靖屡次与众人争辩，但他的父亲却不避讳这一点——西北的冲突本就不似中原般激烈，在父亲的计划中，自己的儿子们将在剿匪与小规模冲突中积累功勋与经验，等到成熟之时，他就可以光荣卸任，把防务交予值得信赖的儿子们……\n但事与愿违，日本帝国对中国的全面入侵击碎了无数军阀可悲的地区主义幻想，无数年轻人被抗日的热情所感召，而敏锐的军阀们则从统一战线的建立中嗅到了剧变降临的前兆。尽管心中所想并不相同，但马惇靖和马鸿宾——这对父子仍一道踏上了抗日的战场。\n在绥西的残酷战争中，马惇靖目睹了无数敌寇的暴行，也深受无数壮烈牺牲的晋绥人民的感召。战火令他迅速成长为一名经验丰富的将领，一位高唱爱国歌曲的领袖，却越发偏离一个合格军阀的道路。他的心中早已充满了全国人民同仇敌忾的气魄，中华民族应当生死与共，“偏安一隅以求自保”从来不是一个现实的选项。\n当时的他不会料想得到，即便汇聚了全民族的力量也无法确保战争的胜利。他更想不到的是，有朝一日，战火也会烧到自己的故乡。如今西北的人民每时每刻都承受着与当日绥西相比有过之而无不及的暴行。为了自己亲爱的故乡，马惇靖愿意献出一切，以求早日将日寇驱逐。§!"
   COX_Ma_Dunjing_sec_desc: "§Y安全部长§!\n§Y军阀§!\n------------\n§L做派首鼠两端，立场摇摆不定——任何在乱世中割据一方的军阀都不约而同地总结出了这相同的生存哲学。得益于此，军阀们在某种程度上建立了形形色色的，还算稳定的政权。\n半个世纪悄然逝去，中华大地乱局如故，所以正如世界上的其他政权一样，他们也需要合格的接班人。军阀们通常会将自己相中的直系后代或家族中有前途的年轻人们早早地安插在部队中，给他们“参谋”，“师长”之类的职务，教导着这些人军阀的生存之道。\n马惇靖，便是这些年轻人中的佼佼者。\n他自幼熟读诗书，从小便懂得阿拉伯文，能根据大人的意思解经。在他父亲马鸿宾的部队中。他步步高升，从营职升到了团，旅，师……不到30岁，他就当上了81军的参谋长。在旁人看来，他不过是凭着父亲的权柄扶摇直上——虽然马惇靖屡次与众人争辩，但他的父亲却不避讳这一点——西北的冲突本就不似中原般激烈，在父亲的计划中，自己的儿子们将在剿匪与小规模冲突中积累功勋与经验，等到成熟之时，他就可以光荣卸任，把防务交予值得信赖的儿子们……\n但事与愿违，日本帝国对中国的全面入侵击碎了无数军阀可悲的地区主义幻想，无数年轻人被抗日的热情所感召，而敏锐的军阀们则从统一战线的建立中嗅到了剧变降临的前兆。尽管心中所想并不相同，但马惇靖和马鸿宾——这对父子仍一道踏上了抗日的战场。\n在绥西的残酷战争中，马惇靖目睹了无数敌寇的暴行，也深受无数壮烈牺牲的晋绥人民的感召。战火令他迅速成长为一名经验丰富的将领，一位高唱爱国歌曲的领袖，却越发偏离一个合格军阀的道路。他的心中早已充满了全国人民同仇敌忾的气魄，中华民族应当生死与共，“偏安一隅以求自保”从来不是一个现实的选项。\n当时的他不会料想得到，即便汇聚了全民族的力量也无法确保战争的胜利。他更想不到的是，有朝一日，战火也会烧到自己的故乡。如今西北的人民每时每刻都承受着与当日绥西相比有过之而无不及的暴行。为了自己亲爱的故乡，马惇靖愿意献出一切，以求早日将日寇驱逐。§!"
   Bo_Yibo: "薄一波"
