--- a/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
@@ -312,9 +312,11 @@
 	COX_Public_Trial_Of_Traitorous_Government: "公审汉奸政府"
 	COX_Public_Trial_Of_Traitorous_Government_desc: "陈公博，王克敏，李士群……这一串全的大汉奸的名单在北平城里贴的到处都是。虽然所有人都被这群汉奸气的牙痒痒，许多人甚至建议取消公审，直接判处死刑。但我们仍要坚持公审。这不是对所谓“程序正义”的追求，而是为了通过审判让人民看清这些人的真实嘴脸。让人民对这些狗仗人势，靠出卖同胞利益逍遥快活的人渣做出真正公正的判决。"
 	COX_Towards_National_Liberation: "利剑斩断枷锁"
-	COX_Towards_National_Liberation_desc: "随着东北与广东的战事尘埃落定，日本——这个如今的夕阳帝国不得不向自己曾经认为难成大患的中国求和。目前，停战协议正在紧张地协商之中。经过了不屈不挠的斗争，中国人民以利剑斩断了困在自己身上沉重的枷锁，用流淌的热血浇灌出璀璨的自由之花。在胜利中迈向全国解放！\n\n“会看射雕处，千里暮云平。”"
+	COX_Towards_National_Liberation_desc: "随着东北与广东的战事尘埃落定，日本——这个如今的夕阳帝国不得不向自己曾经认为难成大患的中国求和。目前，正式和约正在紧张地协商之中。经过了不屈不挠的斗争，中国人民以利剑斩断了困在自己身上沉重的枷锁，用流淌的热血浇灌出璀璨的自由之花。在胜利中迈向全国解放！\n\n“会看射雕处，千里暮云平。”"
+	COX_Towards_National_Liberation_tt: "在人民百折不挠的努力下，祖国终于从外国侵略者的压迫中获得了§V解放§!！"
 	COX_Convene_National_General_Congress: "召开全国代表大会"
 	COX_Convene_National_General_Congress_desc: "终于，我们千疮百孔的祖国母亲夺回了属于她的自由。曾经彼此失去联系，四分五裂的共产党组织也终于能够重新联系在一起。二十年的风雨见证了无数牺牲，更蹉跎了幸存至今的人的面容，在这胜利的时刻，是时候召开久违的全国代表大会了。来自五湖四海的同志们将汇聚在北京，共同讨论我们党，以及中国的未来。\n\n但在此之前，先让我们举杯，庆贺党的幸存与人民的胜利！"
+	COX_Convene_National_General_Congress_tt: "而随着尘埃落定，中国的未来又该何§z去§!何§x从§？。"
 	Nanjing_Negotiations:0 "南京谈判"
 	Nanjing_Negotiations_desc:0 "声势浩大的护国战争终于落幕，被外敌奴役二十余年的中国终得解放。中国共产党与国民党，在半个世纪的风云激荡中分分合合，最后还是站在了一起，结成统一战线以争取民族的自由。\n\n但摆在这个受尽苦难的民族面前的，仍是不确定的未来——该如何清算战犯，治愈全面战争带来的创伤？有着根本分歧的两党，能否在一面旗帜下继续携手共进？飞机启程前往南京，南方的天空鲜见日光，内战的阴霾，已经笼罩在地平线之上……\n\n而中国人民的真正§x未§!§z来§!，全押在这台谈判桌之前。"
 
