内容调整 -为本模组增加的战争添加了战争名称

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -309,3 +309,14 @@
   ##顶端警报
   Alert_XBJ_Work_Group_Avaliable: "有可用§Y工作组§!"
   Alert_XBJ_Work_Group_Avaliable_Desc: "我们可以在西北危机中派遣空闲的§Y工作组§!！"
+
+  ##战争名称
+  WAR_NAME_COX_XIN: "解放新疆"
+  WAR_NAME_GAN_QIN: "绥靖西北"
+  WAR_NAME_XBJ_QIN: "解放西北"
+  WAR_NAME_JAP_COX: "第二次抗日战争-华北战线"
+  WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
+  WAR_NAME_COX_TIB: "解放西藏"
+  WAR_NAME_COX_YUN: "第二次国共内战"
+  WAR_NAME_YUN_COX: "第二次国共内战"
+ 
