--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -230,7 +230,7 @@
   LFB_COX_nc.23.t:0"蒙古解放阵线建立"
   LFB_COX_nc.23.d:0"“泽登巴尔同志，在这里住得还习惯吗。”\n\n“还好吧毛岸英同志，住在这里至少比担惊受怕好多了。”\n\n自从那次吓人的边境冲突之后已经过去好几个月了。越来越多的蒙古人民军来到了新疆苏区。\n\n甚至连那位传奇的游击领袖，泽登巴尔也来到了这里。\n\n这天，毛岸英带着外交人员来到了苏赫巴托的住处，尽管他们从未见过面。但是以前留苏的经历和抗日的战绩让两人很快熟络到了一起。\n\n“泽登巴尔同志，我这次来，主要还是想和你讨论一下蒙古的未来。”毛岸英将文件递给泽登巴尔，“毕竟我们都知道，离乡的感觉并不好受。”\n\n泽登巴尔接过文件，细细阅读之后，松了一口气。文件大体是关于人民军与红军的军事合作与交流，却丝毫没有提及中国对外蒙古的主权声索。泽登巴尔一直担心毛岸英会趁着这个机会要回外蒙古的主权。\n\n“我们目前的打算。”毛岸英开始讲起接下来的军事部署。“是在准备完成之后开始渗透起蒙古的工作，至于目标，则是控制大部分与苏区接壤的蒙古地区，最好能到达乌兰巴托。为此，苏区将提供一切可能的帮助，包括人员，装备，训练。”\n\n泽登巴尔点了点头：“那就麻烦您了。”"
   LFB_COX_nc.23.a:0"Да здравствует революция！（革命万岁！）"
-  LFB_NC_MEN_tt:0"我们将能够通过决议支持蒙古革命！"
+  LFB_NC_MEN_tt: "我们将能够通过决议支持§V蒙古革命§!！\n\n蒙古的革命者们将会视时机发动§V革命§!，在草原上§G牵制敌军§!，但他们的力量§R不足以直接参与第二次抗日战争§!。"
   LFB_COX_nc.24.t:0"泽登巴尔告乌兰巴托同胞书"
   LFB_COX_nc.24.d:0"同胞们！自我们从清朝的帝国主义中独立以来，这座城市经受了多少苦难！这座城市的居民永远不会忘记1921年时，我们是如何团结起来，赶走了反动的博克多汗和他的走狗恩琴男爵。也不会忘记后来德国法西斯和日本法西斯发动战争时，蒙古的军民是如何保卫他们的国家的。虽然我们暂时被日本人击败，但是蒙古人民不会向任何帝国主义屈服！我们永远是自由的！有的人或许会说：在日本人的治下过活吧，因为这样好过再次燃起战火。相信这句话的人，看看乌兰巴托城吧，这座城市的哪一处地方没有被日本人控制？哪一分钱财没有被日本人榨取？他们穷尽每一种方法，将蒙古的所剩无几的财富榨得一干二净。正如旧时代的贵族和喇嘛！自由的蒙古不会忍受这样的屈辱！\n\n面对这样的情况，蒙古人民和世界上其他千千万万受到法西斯压迫的人民一样！因为这座城市是英雄的城市，城市的人民是英雄的人民！他们永远记得乌兰巴托(即“红色英雄城”）的含义，并且亲身实践它！或许有人觉得，日本人太强大了，我们永远无法战胜他们。但是恩琴男爵在我们头上作威作福的时候，也有人这么说过，他的下场如何呢？难道不是被俄罗斯和蒙古人民的团结所击败了吗？还有曾经统治蒙古的徐树铮，不也被中国的五四运动打下台了吗？如此看来，总有一天，日本人也会像历史上一切侵略者一样，得到他们应有的惩罚！"
   LFB_COX_nc.24.a:0"总有一天，总有一天…！"
@@ -309,6 +309,8 @@
   ##顶端警报
   Alert_XBJ_Work_Group_Avaliable: "有可用§Y工作组§!"
   Alert_XBJ_Work_Group_Avaliable_Desc: "我们可以在西北危机中派遣空闲的§Y工作组§!！"
+  Alert_COX_GAW_GUI_SpecOp_Avaliable: "有可用§Y特殊行动§!"
+  Alert_COX_GAW_GUI_SpecOp_Avaliable_Desc: "我们可以在解放华北的过程中执行任意的§Y特殊行动§!！"
 
   ##战争名称
   WAR_NAME_COX_XIN: "解放新疆"
