内容优化 -为日本添加了GAW对应的民族精神更改 -修正了部分本地化

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -56,8 +56,8 @@
   COX_the_peasants_tt:0"农民们将会进一步参与到我们对兰州地区的渗透和重建中！"
   COX_the_workers_tt:0"工人们们将会进一步参与到我们对兰州地区的渗透和重建中！"
   COX_the_fighters_tt:0"我们将会针对兰州进行进一步的军事准备！"
-  COX_GAN_war_started_tt:0"我们已经开始了对兰州的入侵"
-  COX_GAN_war_ended_tt:0"我们对兰州的入侵已经结束"
+  COX_GAN_war_started_tt:0"我们已经开始了对兰州的进攻"
+  COX_GAN_war_ended_tt:0"我们对兰州的进攻已经结束"
   ##需要填充
   LFB_COX_wi.1.t:0"西南之声"
   LFB_COX_wi.1.d:0"最开始只是一串旧电码，一段杂音，一段意义不明的呼号。但很快，新疆临时组织起的情报部门反复确认比对，从泛黄的密码本中，他们辨识出了这样的信息——“我们，在西南，你们，是谁？”。敌人没有可能在二十年间仍对销声匿迹的地下党电台保持着监控，如果信号的对面是我们的同志，那么他们传达的讯号证明了一件事——仍有同志坚守在祖国西南。\n\n在之后的数月间，不断有电波往来与祖国的西北西南，对方确认了新疆与青海的现状，我们也知晓了对方的身份——对方竟然是抗战末期从延安南下的党中央余部，经历了二十年间不间断的围剿，他们顽强地在西南边境的丛林间生存下来，开辟了广大的农村革命根据地。\n\n虽然相比于我们在西北取得的成就要逊色许多，但党中央依然坚守的消息仍令许多同志感到心安。在交流之中，他们提及了风云激荡的西南局势，似乎一场壮烈的斗争即将拉开序幕……"
@@ -316,9 +316,13 @@
   WAR_NAME_COX_XIN: "解放新疆"
   WAR_NAME_GAN_QIN: "绥靖西北"
   WAR_NAME_XBJ_QIN: "解放西北"
-  WAR_NAME_JAP_COX: "第二次抗日战争-华北战线"
+  WAR_NAME_JAP_COX: "大东亚战争-华北战线"
+  WAR_NAME_COX_JAP: "大东亚战争-华北战线"
   WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
+  WAR_NAME_YUN_JAP: "第二次抗日战争-华南战线"
   WAR_NAME_COX_TIB: "解放西藏"
+  WAR_NAME_MEN_MEA: "蒙古革命"
+  WAR_NAME_MEA_MEN: "蒙古革命"
   WAR_NAME_COX_YUN: "第二次国共内战"
   WAR_NAME_YUN_COX: "第二次国共内战"
  
