内容优化 -覆盖了原版中亚框架内容 -补充了部分本地化 -改进了山西机制的工具提示

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -135,21 +135,25 @@
  LFBUG.11.desc: "飞机慢降落在乌鲁木齐的跑道上，衬得跑道上的人很着急。\n\n而当毛岸英下了飞机，回到他在新疆的办公地点之后，他发现这里早就被大家包围了。\n\n张闻天在最前面盯着他，老眼里尽是血丝，\n\n“你为什么答应他们？你忘了当年他们是怎么背叛我们的吗？民国十六年，四一二清党啊！黄浦江都被染成血色的！党的多少同志被他们杀害！就算是你父亲！”张闻天指着毛岸英的鼻子：“就算是你父亲！也差点被他们杀了！”\n\n周恩来两步上前，把张闻天拦在毛岸英身前：“老张，老张，冷静一下。”\n\n“毛岸英！你今天最好解释清楚！否则！我只好召开西北政治局会议罢免你的主席地位了！”\n\n“张老，您太激动了，抗日的时候，我们又不是没有和他们合作过…”\n\n“可是现在日本人已经滚蛋了！他们现在元气大伤，几年内都不会回来！我们完全可以消灭他们！报仇雪恨！”\n\n“张老，难道国民党不是我们的同胞吗？如果日本人趁着我们解放中国的时候冒险怎么办？如果我们真的再一次打输了怎么办？中国已经落后太久了，如果她真的永远赶不上了呢？我能理解您的心情，可是现在的中国需要团结和喘息，过去的中国不也是因为各路军阀不团结才被日本乘虚而入吗？”\n\n“毛岸英！你不能把旧军阀和现在的人民军队相比！你看吧！如果说以后国民党再制造一个四一二！你是要负责任的！”"
  LFBUG.11.a: "“我希望这是最后一次国共合作！”"
  LFBUG.12.t: "胜券在握？"
- LFBUG.12.desc: "“蒋副总统，真的就这样让共党加入联合政府吗？那群共党无孔不入，不过几年，我们就会被渗透得和筛子一样的！”\n\n “你怕什么，我把你提到军事统计局局长的职位就是为了让你好好监视军队的。我问问你，哪个党一开始不是清廉的？后来党员多了，自然也就难管了。只要以后共产党和我们接触多了，他们也会习惯这种灯红酒绿的日子。到时候他们和我们还有什么区别？”\n\n 尽管副总统说出这样的话，局长还是难掩他的恐惧，作为党内的后辈。他已经听了不少遗老的埋怨。他们不止一次地在局内的会议上大谈共党的威胁。\n\n “你放心，我当初在德国学习的时候就研究过这个问题。结论是共产党只擅长山村游击战。一旦到了议会里面，他们就不行了。德国共产党以前起义的时候，如烈火燎原，但是后来纳粹党掌权之后，德共便被希特勒打压至销声匿迹。在印度，就前几年，印度的共产党就因为政见不合而分裂为至少三个独立的政党，尽管他们之间还有联系，但是已经不足以影响国大党的统治地位。所以，国民大会将会是我们最熟悉的战场。因为，在这个世界上，”"
- LFBUG.12.a: "“还从来没有过一个共产党，能通过议会成为一个大国的执政党！”"
+ LFBUG.12.desc: "“蒋副总统，真的就这样让共党加入联合政府吗？那群共党无孔不入，不过几年，我们就会被渗透得和筛子一样的！”\n\n “你怕什么，我把你提到军事统计局局长的职位就是为了让你好好监视军队的。我问问你，哪个党一开始不是清廉的？后来党员多了，自然也就难管了。只要以后共产党和我们接触多了，他们也会习惯这种灯红酒绿的日子。到时候他们和我们还有什么区别？”\n\n 尽管副总统说出这样的话，局长还是难掩他的恐惧，作为党内的后辈。他已经听了不少遗老的埋怨。他们不止一次地在局内的会议上大谈共党的威胁。\n\n “你放心，我当初在德国学习的时候就研究过这个问题。结论是共产党只擅长山村游击战。一旦到了议会里面，他们就不行了。德国共产党以前起义的时候，如烈火燎原，但是后来纳粹党掌权之后，他们便被希特勒打压至销声匿迹。就前几年，印度的共产党就因为政见不合而分裂为至少三个独立的政党，尽管他们之间还有联系，但是已经不足以影响国大党的统治地位。所以，国民大会将会是我们最熟悉的战场。因为，在这个世界上————”"
+ LFBUG.12.a: "“还从来没有过一个共产党，能通过议会成为一个大国的执政党呢。”"
  LFBUG_tt_12: "现在，南京条约已经签署，中国人民终于获得了暂时的和平，可中国的未来却无人可以给出答案。"
  LFBUG.101.t: "不识好歹"
- LFBUG.101.desc: "“……赤匪不顾大局，不识大体……”（占位）"
- LFBUG.101.a: "人所恶痛者，赤匪也！"
+ LFBUG.101.desc: "“怎么回事？今天的报纸看了没？”\n\n “不是说联合政府已经办起来了吗，还能出什么岔子？”\n\n“说的就是这个！你看！”\n\n“新一届内阁已选出，人选如下……搞什么，这部长怎么都是赤党的人？”\n\n“赤党真是疯了！念在抗日有功的份上，咱们已经给足了他们面子了！怎么现在还蹬鼻子上脸了？”\n\n“我说这个内阁人选再怎么共同提名，最终还得是根据委员会拍板啊？赤党是怎么摆平他们的？难不成给他们塞了钱？”\n\n“威逼，利诱，他们赤党什么做不出来？二十年代就想这么搞，现在还要再搞一次？”\n\n“难不成到最后还要跟以前一样，再打一仗？”\n\n“打仗？我们好好请赤党来谈判，而他们就搁这玩这出！我看早就该打了！”\n\n“大家先息怒，我觉得不如再谈谈……”\n\n“别他妈谈了，咱们给了他多少好脸色，结果搞成这个样子。你跟他谈，他在你面前耍太极，背后指不定什么时候就要捅你一刀子！”\n\n“道渊，你再等等，多半是委员会里出了什么意外，我们这边可以再次安排一次会谈……”\n\n“谈个屁！还在这谈，有你这功夫，人家枪口都顶你脑门子上了！我看咱也别闲着，干脆战场上见真章吧！”"
+ LFBUG.101.a: "“赶紧给前线打电话！”"
+ LFBUG_101_a_tt: "§R战争的阴云再次笼罩中国……§!"
  LFBUG.102.t: "烽烟再起"
- LFBUG.102.desc: ""
- LFBUG.102.a: "反击的时候到了！"
+ LFBUG.102.desc: "几天前，他们的连长曾经告诉过王常，对山另一边的共军小心点，没事不要和他们说话，但是王常没有在意。\n\n自从日本投降之后，护国军也随之解散，他们半个连被”国民政府”收编，就驻扎在莲花台山的南边，另一半则加入了共军，驻扎在同一座山的北边。有的时候，两军的长官还能牵头组织一些活动什么的。大家都觉得既然日本人滚蛋了，就能复员回家了——直到有关谈判破裂的传言开始在部队中流传。、\n\n “谈判破裂是什么意思？” \n\n “就是闹掰了，绝交了，关系变孬了，”连里的老兵这么回答他。\n\n王常不信这套，后来的某天晚上，他试着偷偷溜出去找他在共军的兄弟们，但是被哨兵发现，被打了一顿之后关了禁闭。他早上刚被从禁闭室里放了出来，就从战友那里听到了流言：今天晚上，突袭共军。\n\n太阳落山时，王常找机会摸出了军营，向着北边奔去。他感觉自己比往常更快，时间紧迫，他必须拼了命地跑——哪怕没法阻止战斗，起码也能带上几个兄弟开溜。\n\n不知过了多久，他看到了一个正在巡逻的红军哨兵，刚想避开，就被一截树根绊倒。那个哨兵听到了他搞出的动静，等王常再抬起头时，他看到了哨兵的枪口。\n\n “什么人？干什么的？” \n\n “兄弟！别开枪！我有急事要找二连的……” \n\n “先说清楚！什么事？” \n\n “来不及了，赶紧带我去找人！我们这边要...” \n\n王常的话还没说完，周围突然亮如白昼。两人抬头向光源望去，看到一颗照明弹划过夜空。\n"
+ LFBUG.102.a: "随后到来的是枪声"
+ LFBUG_102_a_tt: "随着理念之争再无法弥合，§R中国再陷血海§!!"
  LFBUG.201.t: "欺人太甚"
- LFBUG.201.desc: "“……国民党反动派排挤民主进步人士，其野心昭然若揭……”（占位）"
- LFBUG.201.a: "抛弃幻想，准备斗争！"
+ LFBUG.201.desc: "“这就是他们最后给出的人选？” \n\n“我刚看见也不信。他娘的，那个委员还在那一个劲的打哈哈，说什么这是照应着国军在南边做出的贡献。我呸！要不是咱们的小伙子在北边打赢了，他们连南京都见不着！” \n\n “兵给人家管，行政也是人家拍板，这联合政府是联合了个啥？” \n\n “唉，你说这……党委那边怎么说？” \n\n “说是已经下命令了。还没撕破脸，但后方的部队都在往前调。对面那边估计也看出来了，这几天一个劲地逮人，听说有不少投我们这边来的又给抓回去了。” \n\n “刚一块打完日本人，这就翻脸？” \n\n “你不跟他们翻脸，他冷不丁的就要在你背后放枪。“四一二”，忘啦？你看现在搞得这一套，咱们是一点关键职位不占，要是就这样傻不愣登地谈成了，用不了几天就全都得玩儿完！”\n\n“怎么说？” \n\n “还能怎么说？等会，政委那边来信了————”"
+ LFBUG.201.a: "“————全员战备，准备出发。”"
+ LFBUG_201_a_tt: "§R战争的阴云再次笼罩中国……§!"
  LFBUG.202.t: "烽烟再起"
- LFBUG.202.desc: "（占位）"
- LFBUG.202.a: "先下手为强！"
+ LFBUG.202.desc: "虽说是“抗日战争”，可李震却觉得过去的这段时间他打的都是中国人。在重庆的城市中与护国军对峙的是中国人，在湖南的乡间掘壕固守的是中国人，在南京城附近跟日本坦克一同冲锋的也是中国人。那些伪军的作为令人发指，为了民族解放，也必须把这些汉奸都打倒，李震明白这一点；可是一直以来和与自己长着相同面孔的人拼杀，他心里终究不是滋味。\n\n自从日本投降之后，护国军也随之解散。李震所在的半个连投了共，另一半则被国军收编，两支部队分别驻扎在莲花台山的南北两边。虽然编制上分属两侧，但这些旧日战友的关系十分融洽。在偶尔的聚会中，大家还会谈起对复员后和平生活的希望。\n\n而这样的希望很快被“国共谈判破裂”的传言打破。再然后，政委开始没日没夜地给战士们做思想工作，向他们阐明各种革命的大道理。他说的句句在理，可李震还是不愿往那方面想：他已经厌倦了向同胞开火，更何况，这次还是昔日战友。\n\n可这一天终究还是来了。\n\n太阳落山后不久，李震的部队就进入了待命位置。现在中国人打中国人，是为了中国人再也不需要打中国人——他用政委说过的话安慰自己。他趴在山坡上，努力地不去想自己见过的那些面庞，活的，死的。时间是如此的漫长，直到一颗照明弹划过夜空。"
+ LFBUG.202.a: "随后到来的是枪声"
+ LFBUG_202_a_tt: "随着理念之争再无法弥合，§R中国再陷血海§!!"
  LFBUG.301.t: "革命得胜"
  LFBUG.301.desc: "（占位）"
  LFBUG.301.a: "人民万岁！"
