--- a/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
@@ -249,4 +249,4 @@
  COX_Liberate_Shaanxi:0 "陕西争夺"
  COX_Liberate_Shaanxi_desc:0 "\n\n\n\n\n\n§R春回大地，惊雷阵阵！§!护国军坚定的步伐宣告了全民族抗战的再度爆发，§G西北军民§!万众一心，终于将帝国的疯狗逐出了兰州。\n\n放眼东去，当今的§j日本帝国§!，正不计代价地拱卫着华北地区——其在中原地区的§j统治核心§!。为此，它不惜悍然入侵晋系军阀，将那里的秩序撕个粉碎。如今，山西省已被划入华北军管区，大量日军入驻此处，征召民夫，修筑工事，而陕西省则被弃之不顾，沦为“群盗四起”的混乱之地。\n\n但在所谓的“匪盗”中，我们惊喜的发现了同志的身影。在陕北的黄沙峭壁间，仍有§e扛着红旗的战士屹立至今§!。在我们做好与日本爆发全面冲突的准备前，我们可以对他们送出力所能及的援助，以协助他们重夺§G中国革命的圣地§!。"
  COX_occupying_Shaanxi:0 "红军解放陕西中"
- COX_Shaanxi_runaway:0 "傅作义加入护国军倒计时"
+ COX_Shaanxi_runaway:0 "傅作义加入护国军倒计时\n\n一旦到期，华北的紧张局势将被§R彻底引爆§!，我们将不得不§R发动进攻§!"
