--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -44,7 +44,12 @@
   RULE_OPTION_LFB_SOCINTERN_DISABLED: "默认"
   RULE_OPTION_LFB_SOCINTERN_DISABLED_DESC: "出于平衡性和未来开发的考虑，原版的共产国际机制将会被§G禁用§!。"
   RULE_OPTION_LFB_SOCINTERN_ENABLED: "§R启用§!"
-  RULE_OPTION_LFB_SOCINTERN_ENABLED_DESC: "启用原版共产国际机制。\n注意：这一选项可能会导致平衡性问题并干扰本模组中的机制，强烈§R不建议开启§!。"
+  RULE_OPTION_LFB_SOCINTERN_ENABLED_DESC: "启用原版共产国际机制。\n\n注意：这一选项可能会导致平衡性问题并干扰本模组中的机制，强烈§R不建议开启§!。\n"
+  LFB_Central_Asia_status: "中亚框架内容"
+  RULE_OPTION_LFB_CA_FRAMEWORK_DISABLED: "默认"
+  RULE_OPTION_LFB_CA_FRAMEWORK_DISABLED:_DESC: "为了适配本模组对中亚地区的设计改动以及即将到来的内容更新，原版的中亚框架内容将会被§G禁用§!。"
+  RULE_OPTION_LFB_CA_FRAMEWORK_ENABLED: "§R启用§!"
+  RULE_OPTION_LFB_CA_FRAMEWORK_ENABLED_DESC: "启用原版中亚框架内容\n\n注意：这一选项可能会导致兼容性问题，强烈§R不建议开启§!\n"
 
   #新闻事件
   COX_news_event.7.t:0"[Get_newspaper_header]湖南战役"
@@ -71,7 +76,7 @@
   LFB_COX_wi.4.t:0"西北抗日阵线成立"
   LFB_COX_wi.4.d:0"没有繁杂的仪式，没有掌声与喝彩，仅凭着几条道路的整修，青海与新疆就紧密的联系在了一起。从吐鲁番到西宁，在工厂与前线之间，洋溢着怒火与复仇的喜悦。横亘三千公里，地广人稀的西北内陆，孕育着语言不同，风俗迥异的人们。但尽管形式不同，日本帝国主义的压迫对每个人而言都如此刻骨铭心，以至于轻易弭平了民族间的沟壑，暂时令各个敌对阶级团结一心。"
   LFB_COX_wi.4.a:0"无论如何，我们团结一致，气吞山河！"
-  LFB_IF_start_tt:"我们将会进入紧急战备状态，获得额外的生产单位与正面修正"
+  LFB_IF_start_tt:"我们将会进入紧急战备状态，获得额外的生产单位与正面修正！"
   LFB_COX_wi.5.t:0"宜将剩勇追穷寇"
   LFB_COX_wi.5.d:0"长官：\n\n在最新一次前出侦察中，我们发现盘踞在兰州的鬼子又有了异动。那里的岗哨相较之前又减少了许多，巡逻队也不见了踪迹，我们得以几乎不受阻碍地进抵兰州近郊——鬼子似乎把全部的兵力都堆到了城里。坦克，大炮，每条街上都站满了歪歪扭扭的士兵。兵力如此集中，戒备却这么松弛，看来鬼子不是要进攻，而是准备撤退了！\n\n鉴于如今风雨欲来的形势，西北局的同志们一致同意这位侦察兵的判断，我们必须联合现在兰州附近的游击力量，在辻政信落荒而逃前将他的疯狂埋葬在西北！"
   LFB_COX_wi.5.a:0"毕其功于一役！"
@@ -187,7 +192,7 @@
   COX_occupying_Shaanxi_effect_tt:0"陕西的局势发生变化！"
   COX_occupy_Xian:0"进军西安"
   COX_occupy_Xian_trigger_tt:0"红军对陕西的占领程度达到§G100§!"
-  COX_occupy_Xian_effect_tt:0"我们将得以彻底确保对陕西的控制权！"
+  COX_occupy_Xian_effect_tt:0"我们将得以彻底确保对陕西的控制权！\n\n一旦这样做，势必会引起日军的§R注意§!，我们将不得不§R发动进攻§!！"
   COX_dispatching_vanguard:0"派遣前锋部队"
   COX_dispatching_vanguard_tt:0"红军力量增加§G15§!"
   COX_equipment_delivery:0"分发装备"
