--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -68,7 +68,7 @@
   LFB_COX_wi.1.d:0"最开始只是一串旧电码，一段杂音，一段意义不明的呼号。但很快，新疆临时组织起的情报部门反复确认比对，从泛黄的密码本中，他们辨识出了这样的信息——“我们，在西南，你们，是谁？”。敌人没有可能在二十年间仍对销声匿迹的地下党电台保持着监控，如果信号的对面是我们的同志，那么他们传达的讯号证明了一件事——仍有同志坚守在祖国西南。\n\n在之后的数月间，不断有电波往来与祖国的西北西南，对方确认了新疆与青海的现状，我们也知晓了对方的身份——对方竟然是抗战末期从延安南下的党中央余部，经历了二十年间不间断的围剿，他们顽强地在西南边境的丛林间生存下来，开辟了广大的农村革命根据地。\n\n虽然相比于我们在西北取得的成就要逊色许多，但党中央依然坚守的消息仍令许多同志感到心安。在交流之中，他们提及了风云激荡的西南局势，似乎一场壮烈的斗争即将拉开序幕……"
   LFB_COX_wi.1.a:0"知道了"
   LFB_COX_wi.2.t:"统一阵线再立"
-  LFB_COX_wi.2.d:0"起初，当护国军携整个西南的抵抗力量，向国民政府的腹地发起总攻时，没人认为他们能成功。直到云南的电台将武汉解放的消息广播至全国，身处内地的地下党接头人送来了西南中央的捷报，西北的共产党才初步相信了这个不可思议的结论——\n\n西南起义已取得初步成功，烈火已成燎原之势。而伪政府的残余，此时正在日本的援助下，拼命坚守东南沿海，与护国军对峙。\n\n此时，在乌鲁木齐与西宁，干部们早已守在了无线电旁，仔细地聆听着护国军组织的战况播报。当听到护国军拼死血战，在反复拉锯后，终于登上了武汉城头，不少老兵与干部们落下了数十年未曾流过的泪——多年以来，他们的身心已被粗粝的北风锤炼得无比刚强，但如今响彻大江南北的冲锋号声，还是吹进了他们心中柔软的角落。\n\n身处乌鲁木齐的毛岸英很快抑制住了激动的情绪，他竭力压制住自己颤抖的声音，朗声说到： “同志们……同志们！南方的同志们再次实现了不可能之事，他们解放了武汉，与日本的傀儡政权分庭抗礼。但毫无疑问，日本帝国主义不会对此无动于衷。此时此刻，护国军行的每一步，都建立在千万牺牲之上，他们独木难支……”\n\n “……美国人常说，日本帝国主义是一只盘踞在东亚的猛虎，但我要说，它不过是一只表面张牙舞爪的纸老虎。这是护国军证明了的，现在全国的抗日热情已是二十年来的最高潮，我们就要与这只纸老虎碰一碰，把它戳穿，把它撕碎，又有何妨？”\n\n毛岸英激情的演说引起了台下的一阵欢呼，在喜悦的氛围中，乌鲁木齐苏维埃全票通过了进行全面战备的动议。\n\n 西宁城中，刘少奇平静地说道，“…….我们曾在兰州遭到了惨败，深知日军的残虐不是伪政府的军警可以比拟的，此时若不能团结全国一切抗日的力量，恐怕护国军终将独木难支……”\n\n“……我知道，有的同志害怕主动出击，觉得一旦失败，就是下一个1952，下一次屠杀。但很多同志其实搞错了因果，我们能存续至今，归根到底是因为老百姓的支持，老百姓支持共产党，归根到底是因为我们承诺会赶走日本鬼子。我们等了二十年，如今机会终于来了，如果共产党此时不挺身而出，老百姓还会支持我们吗？”\n\n第二天，西宁临时人民政府就下达了重整武装，严密监视兰州方向日军动向的命令。"
+  LFB_COX_wi.2.d:0"起初，当护国军携整个西南的抵抗力量，向国民政府的腹地发起总攻时，没人认为他们能成功。直到云南的电台将武汉解放的消息广播至全国，身处内地的地下党接头人送来了西南中央的捷报，西北的共产党才初步相信了这个不可思议的结论——\n\n西南起义已取得初步成功，烈火已成燎原之势。而伪政府的残余，此时正在日本的援助下，拼命坚守东南沿海，与护国军对峙。\n\n此时，在乌鲁木齐与西宁，干部们早已守在了无线电旁，仔细地聆听着护国军组织的战况播报。当听到护国军拼死血战，在反复拉锯后，终于登上了武汉城头，不少老兵与干部们落下了数十年未曾流过的泪——多年以来，他们的身心已被粗粝的北风锤炼得无比刚强，但如今响彻大江南北的冲锋号声，还是吹进了他们心中柔软的角落。\n\n身处乌鲁木齐的毛岸英很快抑制住了激动的情绪，他竭力压制住自己颤抖的声音，朗声说到： “同志们……同志们！南方的同志们再次实现了不可能之事，他们解放了武汉，与日本的傀儡政权分庭抗礼。但毫无疑问，日本帝国主义不会对此无动于衷。此时此刻，护国军行的每一步，都建立在千万牺牲之上，他们独木难支……”\n\n “……美国人常说，日本帝国主义是一只盘踞在东亚的猛虎，但我要说，它不过是一只表面张牙舞爪的纸老虎。这是护国军证明了的，现在全国的抗日热情已是二十年来的最高潮，我们就要与这只纸老虎碰一碰，把它戳穿，把它撕碎，又有何妨？”\n\n毛岸英激情的演说引起了台下的一阵欢呼，在喜悦的氛围中，乌鲁木齐苏维埃全票通过了进行全面战备的动议。\n\n 西宁城中，刘少奇平静地说道，“……我们曾在兰州遭到了惨败，深知日军的残虐不是伪政府的军警可以比拟的，此时若不能团结全国一切抗日的力量，恐怕护国军终将独木难支……”\n\n“……我知道，有的同志害怕主动出击，觉得一旦失败，就是下一个1952，下一次屠杀。但很多同志其实搞错了因果，我们能存续至今，归根到底是因为老百姓的支持，老百姓支持共产党，归根到底是因为我们承诺会赶走日本鬼子。我们等了二十年，如今机会终于来了，如果共产党此时不挺身而出，老百姓还会支持我们吗？”\n\n第二天，西宁临时人民政府就下达了重整武装，严密监视兰州方向日军动向的命令。"
   LFB_COX_wi.2.a:0"四万万同胞且待，看长风更起，催我出征。"
   LFB_COX_wi.3.t:0"西北平定"
   LFB_COX_wi.3.d:0"新疆局的同志们：\n\n得知全面对日开战的消息后，西北局及时调整统一战线政策，现已显出卓越成效。原先顽固的反动地主与阿訇均表示愿意支持新政府，就连土匪乱军也走出了营垒，自愿加入我们的军队对抗日本人。西北乱局终于得以平息，将即刻展开备战工作。"
@@ -298,7 +298,7 @@
   TNO_CountryClosing_epilogue_COX_IF_UG_ending:"在长达百年的蹂躏过后，中国终于又重新站了起来，拥抱久别的自由。国共两党再次同心协力，打碎了日本帝国主义施加的重重锁链；大江南北的人民砥砺共进，终于争得了解放。\n\n双方在战场上团结一致的友谊，似乎也延续到了战后。新的联合政府已经组建，压迫在中国人民头上的一座大山已被铲平，而两党间即便存在分歧，也能在合法的框架内解决，理论上来说，中华民族未来的康庄大道已经铺就……\n\n但这个新生之国，内部却有重重矛盾与隐忧——新组建的国民议会无时无刻不在激烈辩论，却仅能通过一些无关痛痒的法案，制宪会议已召开多次，却鲜有成效；双方的军队虽然已经统一番号，内部却仍是泾渭分明；而国共各自的控制区，面貌已宛如两个国家。尽管双方的领导人一再声明联合的必要，但他们也不能忽视自己党内的反对声音。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，跌跌撞撞着奔向自己的未来……"
 
   TNO_CountryClosing_left_title_COX_IF_civ_war_ending:"拜罢黄垆闻笑语\n英雄人物看今朝"
-  TNO_CountryClosing_epilogue_COX_IF_civ_war_ending:"在长达百年的蹂躏与紧接着的内战后，中国终于得以拥抱最终的和平与自由。由于对中国未来的描绘截然不同，国共和谈最终以破裂告终，大江南北，长城内外，再次被华夏男儿们的鲜血染红……好在，这一切最终得以尘埃落定，血腥的厮杀后，中国共产党成为了最后的赢家。\n 中国受奴役的历史结束了，但中国在废墟中崛起的历史才刚刚开始，在天安门城楼上，毛岸英庄严宣告了中华人民共和国的成立。但在劫后余生欢欣鼓舞的人民脚下，是三十年间饱受日本帝国主义剥削蹂躏，又被绵延不绝的战火摧残的土地。随着中国再度归属于一个大一统的政权，属于这个古老国家的新篇章正在徐徐开启……虽然前路漫长，荆棘密布，但党和人民终将攻坚克难，实现共产主义。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，揩干身上的血污，大踏步奔向自己的未来……"
+  TNO_CountryClosing_epilogue_COX_IF_civ_war_ending:"在长达百年的蹂躏与紧接着的内战后，中国终于得以拥抱最终的和平与自由。由于对中国未来的描绘截然不同，国共和谈最终以破裂告终，大江南北，长城内外，再次被华夏男儿们的鲜血染红……好在，这一切最终得以尘埃落定，血腥的厮杀后，中国共产党成为了最后的赢家。\n 中国受奴役的历史结束了，但中国在废墟中崛起的历史才刚刚开始，在天安门城楼上，毛岸英庄严宣告了中华人民共和国的成立。但在劫后余生欢欣鼓舞的人民脚下，是三十年间饱受日本帝国主义剥削蹂躏，又被绵延不绝的战火摧残的土地。随着中国再度归属于一个大一统的政权，属于这个古老国家的新篇章正在徐徐开启……虽然前路漫长，荆棘密布，但党和人民终将攻坚克难，为迈向社会主义，乃至共产主义，不懈奋斗。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，揩干身上的血污，大踏步奔向自己的未来……"
   
   JAP_puppet_no_war:"离心离德的共荣圈"
   JAP_puppet_no_war_desc:"我们一直大力鼓吹共荣圈内部的团结协作，可当危机真正来临，我们的盟友和傀儡们却并未积极地维护“东亚共荣”。要么是被内部的冲突折磨得焦头烂额，要么是出于自身利益冷眼旁观，他们在这关键时刻并不愿为日本人而在东亚战场上流血。\n\n§R中国问题只能由我们独自解决了。§！"
@@ -313,7 +313,7 @@
 
   ##顶端警报
   Alert_XBJ_Work_Group_Avaliable: "有可用§Y工作组§!"
-  Alert_XBJ_Work_Group_Avaliable_Desc: "我们可以在西北危机中派遣空闲的§Y工作组§!！"
+  Alert_XBJ_Work_Group_Avaliable_Desc: "我们可以在西北局行动GUI中派遣空闲的§Y工作组§!！"
   Alert_COX_GAW_GUI_SpecOp_Avaliable: "有可用§Y特殊行动§!"
   Alert_COX_GAW_GUI_SpecOp_Avaliable_Desc: "我们可以在解放华北的过程中执行任意的§Y特殊行动§!！"
 
