--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -331,3 +331,5 @@
   WAR_NAME_COX_YUN: "第二次国共内战"
   WAR_NAME_YUN_COX: "第二次国共内战"
  
+  ##国家选择界面
+  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围中。主席团的最高领导人亚戈达对这个年轻的中国旅长并无兴趣，但他觉察到，八十八旅的到来是宣称主席团为“苏联正统”的大好时机。于是，他不仅热情地接见了毛岸英，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。这些被亚戈达补充进入八十八旅的战士大多是非俄罗斯人，其中有大量寻求庇护的原东北抗联部队和八路军残部，此外也不乏蒙古、哈萨克乃至布里亚特战士的身影。\n毛岸英深知他只不过是亚戈达整肃部队的棋子，因而只是默默地治理着这支来源复杂的连队，在NKVD的紧密监视下，等待着时机的再一次到来。对暴政的怒火在他心中一天天地积压，终有一天会喷薄而出——只是那时的他还不会想到，会有一个比他更年轻、更勇敢的人，抢先发出荡涤阴霾的呐喊。\n萨布林和他的起义部队已经揭竿而起；八十八旅将会协助萨布林打倒伊尔库茨克暴政，若最终能成功，他们便会踏上归乡之路。"
