--- a/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
@@ -244,7 +244,7 @@ COX_GAW_GUI_NCC_Fort_timer_tt: "日军在华北区域的筑垒等级将会提升
 COX_GAW_GUI_MAN_Fort_timer: "日军筑垒行动"
 COX_GAW_GUI_MAN_Fort_timer_tt: "日军在东北区域的筑垒等级将会提升！"
 COX_GAW_GUI_Escalation_timer: "局势升级"
-COX_GAW_GUI_Escalation_timer_tt: "第二次解放战争即将进入§Y下一阶段§!！"
+COX_GAW_GUI_Escalation_timer_tt: "第二次抗日战争即将进入§Y下一阶段§!！"
 COX_GAW_GUI_JAP_Surrender_timer: "击落旭日"
 COX_GAW_GUI_JAP_Surrender_timer_tt: "我们将会取得第二次抗日战争的§Y胜利§!！"
 LFB_GAW_GUI.1.t: "日本提议和平"
