BUG修复/内容优化 -修复了部分本地化未能正常显示的问题 -修复了COX开局界面显示不正常的问题 -为COX新增了独特的内容开发页面

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -47,7 +47,7 @@
   RULE_OPTION_LFB_SOCINTERN_ENABLED_DESC: "启用原版共产国际机制。\n\n注意：这一选项可能会导致平衡性问题并干扰本模组中的机制，强烈§R不建议开启§!。\n"
   LFB_Central_Asia_status: "中亚框架内容"
   RULE_OPTION_LFB_CA_FRAMEWORK_DISABLED: "默认"
-  RULE_OPTION_LFB_CA_FRAMEWORK_DISABLED:_DESC: "为了适配本模组对中亚地区的设计改动以及即将到来的内容更新，原版的中亚框架内容将会被§G禁用§!。"
+  RULE_OPTION_LFB_CA_FRAMEWORK_DISABLED_DESC: "为了适配本模组对中亚地区的设计改动以及即将到来的内容更新，原版的中亚框架内容将会被§G禁用§!。"
   RULE_OPTION_LFB_CA_FRAMEWORK_ENABLED: "§R启用§!"
   RULE_OPTION_LFB_CA_FRAMEWORK_ENABLED_DESC: "启用原版中亚框架内容\n\n注意：这一选项可能会导致兼容性问题，强烈§R不建议开启§!\n"
 
@@ -323,13 +323,22 @@
   WAR_NAME_XBJ_QIN: "解放西北"
   WAR_NAME_JAP_COX: "大东亚战争-华北战线"
   WAR_NAME_COX_JAP: "大东亚战争-华北战线"
-  WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
-  WAR_NAME_YUN_JAP: "第二次抗日战争-华南战线"
+  #WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
+  #WAR_NAME_YUN_JAP: "第二次抗日战争-华南战线"
   WAR_NAME_COX_TIB: "解放西藏"
   WAR_NAME_MEN_MEA: "蒙古革命"
   WAR_NAME_MEA_MEN: "蒙古革命"
   WAR_NAME_COX_YUN: "第二次国共内战"
   WAR_NAME_YUN_COX: "第二次国共内战"
- 
+  
   ##国家选择界面
-  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围中。主席团的最高领导人亚戈达对这个年轻的中国旅长并无兴趣，但他觉察到，八十八旅的到来是宣称主席团为“苏联正统”的大好时机。于是，他不仅热情地接见了毛岸英，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。这些被亚戈达补充进入八十八旅的战士大多是非俄罗斯人，其中有大量寻求庇护的原东北抗联部队和八路军残部，此外也不乏蒙古、哈萨克乃至布里亚特战士的身影。\n毛岸英深知他只不过是亚戈达整肃部队的棋子，因而只是默默地治理着这支来源复杂的连队，在NKVD的紧密监视下，等待着时机的再一次到来。对暴政的怒火在他心中一天天地积压，终有一天会喷薄而出——只是那时的他还不会想到，会有一个比他更年轻、更勇敢的人，抢先发出荡涤阴霾的呐喊。\n萨布林和他的起义部队已经揭竿而起；八十八旅将会协助萨布林打倒伊尔库茨克暴政，若最终能成功，他们便会踏上归乡之路。"
+  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围。主席团的最高领导人亚戈达对这个年轻的中国旅长并无兴趣，但他觉察到，八十八旅的到来是宣称主席团为“苏联正统”的大好时机。于是，他不仅热情地接见了毛岸英，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。这些被亚戈达补充进入八十八旅的战士大多是非俄罗斯人，其中有大量寻求庇护的原东北抗联部队和八路军残部，此外也不乏蒙古、哈萨克乃至布里亚特战士的身影。\n\n毛岸英深知他只不过是亚戈达整肃部队的棋子，因而只是默默地治理着这支来源复杂的连队，在NKVD的紧密监视下，等待着时机的再一次到来。对暴政的怒火在他心中一天天地积压，终有一天会喷薄而出——只是那时的他还不会想到，会有一个比他更年轻、更勇敢的人，抢先发出荡涤阴霾的呐喊。\n\n萨布林和他的部队已经发动了兵变；八十八旅将加入他打倒伊尔库茨克暴政的斗争。若最终能获得胜利，他们便会踏上归乡之路。"
+  #开局界面
+  CountryInfo_Development_Content.11: "关注LFB最新动态"
+  CountryInfo_Development_Content_desc.11: "您可以通过§Y以下§!渠道了解本§W子模组§!的相关信息\n\n也欢迎加入QQ群：§W262293916§!进行讨论\n\n请务必随时查看我们的最新动态！"
+  CountryInfo_Development_Folder.112: "光自贝加尔湖来-开发团队"
+  CountryInfo_Development_Content.12: "鸣谢"
+  CountryInfo_Development_Content_desc.12: "（在这里放置制作人员名单）"
+  CountryInfo_Development_Content.13: "（占位）"
+  CountryInfo_Development_Content_desc.13: "这装不下这么多人！"
+  CountryInfo_Development_Content_desc.14: "《新秩序：欧洲末日》，其中文汉化包及其子模组“光自贝加尔湖来”（以下简称“本模组”）可能包含受版权保护的素材。\n\n本模组如有对受版权保护的素材的使用，均是以揭露法西斯主义、纳粹主义等极端主义思想的危害性为目的。本模组至今从未，未来也不会试图利用受版权保护的素材营利。因此，本模组认为其对这些素材的使用符合《中华人民共和国著作权法》第24条第2款所规定的“适当引用”、《美利坚合众国法典》第17卷第107条所规定的“合理使用”以及其他司法管辖区相应法律标准的情形。\n\n若您希望将受版权保护的素材用于“合理使用”（或您所处的司法管辖区的相应法律标准）之外的目的，则应当取得相应素材的版权所有者的许可，否则可能构成侵权。"
