内容补充/本地化补充 -增加了COX海军相关内容 -补充和优化了部分本地化

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -318,14 +318,12 @@
   Alert_COX_GAW_GUI_SpecOp_Avaliable_Desc: "我们可以在解放华北的过程中执行任意的§Y特殊行动§!！"
 
   ##战争名称
-  WAR_NAME_COX_XIN: "解放新疆"
+  WAR_NAME_COX_XIN: "中共解放新疆"
   WAR_NAME_GAN_QIN: "绥靖西北"
-  WAR_NAME_XBJ_QIN: "解放西北"
-  WAR_NAME_JAP_COX: "大东亚战争-华北战线"
-  WAR_NAME_COX_JAP: "大东亚战争-华北战线"
-  #WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
-  #WAR_NAME_YUN_JAP: "第二次抗日战争-华南战线"
-  WAR_NAME_COX_TIB: "解放西藏"
+  WAR_NAME_XBJ_QIN: "中共解放西北"
+  WAR_NAME_JAP_COX: "第二次抗日战争-华北战线"
+  WAR_NAME_COX_JAP: "第二次抗日战争-华北战线"
+  WAR_NAME_COX_TIB: "中共解放西藏"
   WAR_NAME_MEN_MEA: "蒙古革命"
   WAR_NAME_MEA_MEN: "蒙古革命"
   WAR_NAME_COX_YUN: "第二次国共内战"
