--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -154,9 +154,9 @@
  LFBUG.202.desc: "虽说是“抗日战争”，可李震却觉得过去的这段时间他打的都是中国人。在重庆的城市中与护国军对峙的是中国人，在湖南的乡间掘壕固守的是中国人，在南京城附近跟日本坦克一同冲锋的也是中国人。那些伪军的作为令人发指，为了民族解放，也必须把这些汉奸都打倒，李震明白这一点；可是一直以来和与自己长着相同面孔的人拼杀，他心里终究不是滋味。\n\n自从日本投降之后，护国军也随之解散。李震所在的半个连投了共，另一半则被国军收编，两支部队分别驻扎在莲花台山的南北两边。虽然编制上分属两侧，但这些旧日战友的关系十分融洽。在偶尔的聚会中，大家还会谈起对复员后和平生活的希望。\n\n而这样的希望很快被“国共谈判破裂”的传言打破。再然后，政委开始没日没夜地给战士们做思想工作，向他们阐明各种革命的大道理。他说的句句在理，可李震还是不愿往那方面想：他已经厌倦了向同胞开火，更何况，这次还是昔日战友。\n\n可这一天终究还是来了。\n\n太阳落山后不久，李震的部队就进入了待命位置。现在中国人打中国人，是为了中国人再也不需要打中国人——他用政委说过的话安慰自己。他趴在山坡上，努力地不去想自己见过的那些面庞，活的，死的。时间是如此的漫长，直到一颗照明弹划过夜空。"
  LFBUG.202.a: "随后到来的是枪声"
  LFBUG_202_a_tt: "随着理念之争再无法弥合，§R中国再陷血海§!!"
- LFBUG.301.t: "革命得胜"
- LFBUG.301.desc: "（占位）"
- LFBUG.301.a: "人民万岁！"
+ LFBUG.301.t: "新的开始"
+ LFBUG.301.desc: "“中国共产党中央委员会，中央临时人民政府行政委员会，中国共产党中央军事委员会向全党、全军、全解放区人民宣告，在党的英明领导下，在红军全体指战员的英勇作战下，在全解放区人民的团结合作下，红军已经彻底打败以国民党反动派为首的反动力量，将和平重新带回中华大地。保卫了第二次抗日战争的成果，捍卫了龙云将军的奋斗结晶……”随着国民党军最后一支有生力量的覆灭，这样的广播传遍了中华大地，传进了街头巷尾。\n\n“啊呀，我们的红军又打赢了哇？！好的呀！好的呀！不愧是毛主席的兵啊！”这是乌鲁木齐的茶馆内，一位老者的兴奋。\n\n“娃他妈，我说过我们党不会输的！哪像你，一听见要打仗了还要怕那还乡团又要回来似的！”陕北的窑洞里，王顺西对着他的妻子高兴地嚷道。” \n\n “诶我说，这共产党的红军，是要比那国民党的兵厉害得多了勒！那天我起床开窗，楼底下呼啦啦的全是睡着的红军！真怪，都不知道他们咋进来的！”上海的小楼前，一位太太听了广播之后对她的姐妹们嚷道。“鼠目寸光！他刚进来肯定秋毫不犯，等到坐稳了天下，还指不定怎么乱来勒！”这是她的姐妹的嘀咕。\n\n “唉……不知道到时候共产党要怎么对我们勒，是不是要‘共产’我们？”温州一家商会里，商人们担忧地发出了叹息。\n\n “说什么不过成王败寇，到头来还不是轮流坐天下！”南京小院内，一个老者愤怒地关掉了收音机。\n\n还有许许多多的声音，有欣喜的，有质疑的，也有不关心的……此时都随着广播的播出在中国大地喧闹着。但不论对此如何看待，经年累月的战争与苦难似乎终于有了个头，而人们肩上的重担也似乎开始轻了起来。\n\n而毛岸英正收拾着自己的行李，最后一次环顾他在新疆待了十年的办公室。中央正在分批次迁往北平，摆在他面前的是一个经历了剥削和战争，百废待兴的新中国。党已经开辟了自己的天下，但真正的挑战才刚刚开始——。\n\n “岸英啊，准备好了没呀？”周恩来出现在门口。\n\n “准备好了”他抬起头。"
+ LFBUG.301.a: "“走吧，去北平。”"
  LFBUG.302.t: "结束动员戡乱状态"
  LFBUG.302.desc: "你的意思是，你专门搞崩了谈判，然后在内战开打以后tag到了YUN，然后帮烤馒头打赢了内战，就是为了看看有没有彩蛋？那你也挺牛逼的，我也没活整，就请你吃六个鸡蛋吧。"
  LFBUG.302.a: "三民主义一统中国。"
