--- a/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
@@ -5,6 +5,7 @@
  #tno_current_version:0 "新秩序：光自贝加尔湖来-Light from Lake Baikal v0.2 大漠孤烟"
  #tno_current_version_date:0 "2023/8/31 TNO-Light from Lake Baikal v0.2 大漠孤烟"
  tno_current_version:  "新秩序：光自贝加尔湖来 v0.25 阋墙御侮"
- tno_current_version_date:  "2024/10/16（测试中） TNO-Light from Lake Baikal v0.25 阋墙御侮"
-
+ tno_current_version_date:  "2024/10/17（发布版本） TNO-Light from Lake Baikal v0.25 阋墙御侮"
+ WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
+ WAR_NAME_YUN_JAP: "第二次抗日战争-华南战线"
 
