--- a/localisation/simp_chinese/COX_opening_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_opening_l_simp_chinese.yml
@@ -28,7 +28,7 @@
  GENERATING_GRADIENT_BORDERS:0 "§B下一场战争……§!"
  #IF线“新内容”文本
  BOOKMARK_NEW_COX:0 "§Y中国旅旅部§!"
- BOOKMARK_NEW_COX_detail:0 "故事，将从§V贝加尔湖畔§!开始\n\n§G阋墙御侮§!§Y版本新增内容：§!\n\n- 第三次§x统一§!§z战线§!§Y重生§!\n\n- §Y数个关于§!§W解放全中国§!§Y的特殊机制§!\n\n- §Y走向§x联§!§z合§!，§S亦或者……§!§!\n--------------\n\n\n£GFX_texticon_bookmark_LFB\n\n\n\n\n在§q西§!§e南§!与§V西北§!的共同攻势下，日本已将其势力范围收缩至华东、华北与东北，但侵略者们依然企图凭借军事手段恢复逐渐失控的§J“大东亚新秩序”§!。\n\n现在，日本帝国将直接介入§X第二次抗日战争§!。你将扮演§V西北抗日边区§!，同§q护国§!§e军§!一道跨过长江与黄河，冲向东北的黑山白水，冲向海南的茂密雨林，为苦难了§x一百三十二年的中国§!带来真正的§i独立§!与§w自由§!！"
+ BOOKMARK_NEW_COX_detail:0 "故事，将从§V贝加尔湖畔§!开始\n\n§G阋墙御侮§!§Y版本新增内容：§!\n\n- 第三次§x统一§!§z战线§!§Y重生§!\n\n- §Y数个关于§!§W解放全中国§!§Y的特殊机制§!\n\n- §Y走向§x联§!§z合§!，§e亦或者……§!§!\n--------------\n\n\n£GFX_texticon_bookmark_LFB\n\n\n\n\n在§q西§!§e南§!与§V西北§!的共同攻势下，日本已将其势力范围收缩至华东、华北与东北，但侵略者们依然企图凭借军事手段恢复逐渐失控的§J“大东亚新秩序”§!。\n\n现在，日本帝国将直接介入§X第二次抗日战争§!。你将扮演§V西北抗日边区§!，同§q护国§!§e军§!一道跨过长江与黄河，冲向东北的黑山白水，冲向海南的茂密雨林，为苦难了§x一百三十二年的中国§!带来真正的§i独立§!与§w自由§!！"
 
  #初版“新内容”文本
  #BOOKMARK_NEW_COX:0 "§Y布里亚特§!"
