--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -260,9 +260,9 @@
   #IF线战后内容
   COX_Nanjing_Negotiations_tt:0"§z南京§!§x谈判§!将会决定中国的命运！"
   COX_TIB_problem:0"藏区问题"
-  COX_TIB_problem_desc:0"西藏虽获解放，但仍然问题重重：在下层，万恶的农奴制仍在荼毒人民；在上层，不服西藏当局的权贵人士们正蠢蠢欲动；向南边看去，自由印度政府态度尚不明确，而印度共和国对西藏产生了浓厚的兴趣。我们必须做出行动，在未来可能的骚乱甚至危机出现前，建立起对藏区的有效管辖，或者，更进一步——对藏区进行民主改革，砸碎那祸害千年的、吃人不吐骨头的农奴制！"
+  COX_TIB_problem_desc:0"西藏虽获解放，但仍然问题重重：在下层，万恶的农奴制仍在荼毒人民；在上层，少数不服西藏当局的权贵人士正蠢蠢欲动；向南边看去，自由印度政府态度尚不明确，而印度共和国对西藏产生了浓厚的兴趣。我们必须做出行动，在未来可能的骚乱甚至危机出现前，建立起对藏区的有效管辖，或者，更进一步——对藏区进行民主改革，砸碎那祸害千年的、吃人不吐骨头的农奴制！"
   LFB_GAW_GUI.9.t:0"和平解放西藏！"
-  LFB_GAW_GUI.9.d:0"或许是因为我方在二次抗日战争中的惊人表现，在经过几轮漫长的谈判之后，西藏当局在玉树宣布：西藏将以自治区的形式回归我国统治。\n\n自此，中国大陆上最后一个受日本影响的区域得到了解放。"
+  LFB_GAW_GUI.9.d:0"或许是因为我方在二次抗日战争中的惊人表现，在经过几轮谈判之后，西藏当局在玉树宣布：西藏将以自治区的形式回归我国统治。\n\n自此，中国大陆上最后一个受日本影响的区域得到了解放。"
   LFB_GAW_GUI.9.a:0"中国，统一而不可分割！"
   LFB_IF_TIB_peace_tt:0"§G西藏回归了祖国的怀抱。§!"
   LFB_GAW_GUI.10.t:0"准备解放西藏"
@@ -295,10 +295,10 @@
   TNO_CountryClosing_epilogue_COX_IF_defeated_ending:"终究，一切以失败落幕。贝加尔湖畔灯塔的微光撕破了层层迷雾，但航船终是搁浅一旁。一切又回到了原点，似乎什么东西都没有改变，这片苦难之地上弥漫着哀伤与绝望。\n\n但是，当春风裹着北还的飞鸟，春雷倏地炸响，焦黑的华北平原上，也总是要开出新芽。自然仍依着它的规律，噤着声，不断向前发展，奔波不息。中国共产党几十年的努力，中华民族几十年间承受之苦难，其壮烈的爆发，终究没能冲开历史的迷雾，人民战争的思想似乎已经被扫进历史垃圾堆。\n\n但是，在边疆，农村与城市，在一切不起眼的角落，星火仍存…只要人民还在承受苦难，只要日寇还在耀武扬威，反抗的火焰就不会熄灭。若不信的话，你看吧！看那黄土高原之上，看那横断山脉之中，看那高筑起的街垒，看那终将自由的人民！\n\n70年代的曙光已经浮现，中国人民仍被束缚于日本帝国主义的压迫之中，他们虽在历史中行了弯路，但终将摆脱一切苦难与耻辱，开辟解放的未来！"
 
   TNO_CountryClosing_left_title_COX_IF_UG_ending:"五十年来天地改\n浑如一梦下荆州"
-  TNO_CountryClosing_epilogue_COX_IF_UG_ending:"在长达百年的蹂躏过后，中国终于又重新站了起来，拥抱久别的自由。国共两党再次同心协力，打碎了日本帝国主义施加的重重锁链；大江南北的人民砥砺共进，终于争得了解放。\n\n双方在战场上团结一致的友谊，似乎也延续到了战后。新的联合政府已经组建，压迫在中国人民头上的一座大山已被铲平，而两党间即便存在分歧，也能在合法的框架内解决，理论上来说，中华民族未来的康庄大道已经铺就……\n\n但这个新生之国，内部却有重重矛盾与隐忧——新组建的国民议会无时无刻不在激烈辩论，却仅能通过一些无关痛痒的法案，制宪会议已召开多次，却鲜有成效；双方的军队虽然已经统一番号，内部却仍是泾渭分明；而国共各自的控制区，面貌已宛如两个国家。尽管双方的领导人一再声明联合的必要，但他们也不能忽视自己党内的反对声音。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，跌跌撞撞着奔向自己的未来……"
+  TNO_CountryClosing_epilogue_COX_IF_UG_ending:"在长达百年的§r蹂躏§!过后，§G中国§!终于又重新站了起来，拥抱§R久别的§!§w自由§!。§x国§!§z共§!两党再次同心协力，打碎了§J日本帝国主义§!施加的重重锁链；大江南北的人民砥砺共进，终于争得了§w解放§!。\n\n双方在战场上团结一致的友谊，似乎也延续到了战后。新的§x联合§!§z政府§!已经组建，压迫在§G中国人民§!头上的一座大山已被铲平，而两党间即便存在分歧，也能在合法的框架内解决，§Y理论上来说，中华民族未来的康庄大道已经铺就……§!\n\n但这个新生之国，内部却有§o重重矛盾§!与§U隐忧§!——新组建的国民议会无时无刻不在激烈辩论，却仅能通过一些无关痛痒的法案，制宪会议已召开多次，却鲜有成效；双方的军队虽然已经统一番号，内部却仍是泾渭分明；而§x国§!§z共§!各自的§W控制区§!，面貌已宛如§x两个国家§!。尽管双方的领导人一再声明联合的必要，但他们也不能忽视自己党内的反对声音。\n\n70年代的曙光已经浮现，§W百折不挠的中国人民重新起身§!，§Y跌跌撞撞着奔向自己的未来……§!"
 
   TNO_CountryClosing_left_title_COX_IF_civ_war_ending:"拜罢黄垆闻笑语\n英雄人物看今朝"
-  TNO_CountryClosing_epilogue_COX_IF_civ_war_ending:"在长达百年的蹂躏与紧接着的内战后，中国终于得以拥抱最终的和平与自由。由于对中国未来的描绘截然不同，国共和谈最终以破裂告终，大江南北，长城内外，再次被华夏男儿们的鲜血染红……好在，这一切最终得以尘埃落定，血腥的厮杀后，中国共产党成为了最后的赢家。\n 中国受奴役的历史结束了，但中国在废墟中崛起的历史才刚刚开始，在天安门城楼上，毛岸英庄严宣告了中华人民共和国的成立。但在劫后余生欢欣鼓舞的人民脚下，是三十年间饱受日本帝国主义剥削蹂躏，又被绵延不绝的战火摧残的土地。随着中国再度归属于一个大一统的政权，属于这个古老国家的新篇章正在徐徐开启……虽然前路漫长，荆棘密布，但党和人民终将攻坚克难，为迈向社会主义，乃至共产主义，不懈奋斗。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，揩干身上的血污，大踏步奔向自己的未来……"
+  TNO_CountryClosing_epilogue_COX_IF_civ_war_ending:"在长达百年的蹂躏与紧接着的内战后，中国终于得以拥抱最终的和平与自由。由于对中国未来的描绘截然不同，国共和谈最终以破裂告终，大江南北，长城内外，再次被华夏男儿们的鲜血染红……好在，这一切最终得以尘埃落定，血腥的厮杀后，中国共产党成为了最后的赢家。\n\n中国受奴役的历史结束了，但中国在废墟中崛起的历史才刚刚开始，在天安门城楼上，毛岸英庄严宣告了中华人民共和国的成立。但在劫后余生欢欣鼓舞的人民脚下，是三十年间饱受日本帝国主义剥削蹂躏，又被绵延不绝的战火摧残的土地。随着中国再度归属于一个大一统的政权，属于这个古老国家的新篇章正在徐徐开启……虽然前路漫长，荆棘密布，但党和人民终将攻坚克难，为迈向社会主义，乃至共产主义，不懈奋斗。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，揩干身上的血污，大踏步奔向自己的未来……"
   
   JAP_puppet_no_war:"离心离德的共荣圈"
   JAP_puppet_no_war_desc:"我们一直大力鼓吹共荣圈内部的团结协作，可当危机真正来临，我们的盟友和傀儡们却并未积极地维护“东亚共荣”。要么是被内部的冲突折磨得焦头烂额，要么是出于自身利益冷眼旁观，他们在这关键时刻并不愿为日本人而在东亚战场上流血。\n\n§R中国问题只能由我们独自解决了。§！"
@@ -330,7 +330,7 @@
   WAR_NAME_YUN_COX: "第二次国共内战"
   
   ##国家选择界面
-  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围。主席团的最高领导人亚戈达对这个年轻的中国旅长并无兴趣，但他觉察到，八十八旅的到来是宣称主席团为“苏联正统”的大好时机。于是，他不仅热情地接见了毛岸英，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。这些被亚戈达补充进入八十八旅的战士大多是非俄罗斯人，其中有大量寻求庇护的原东北抗联部队和八路军残部，此外也不乏蒙古、哈萨克乃至布里亚特战士的身影。\n\n毛岸英深知他只不过是亚戈达整肃部队的棋子，因而只是默默地治理着这支来源复杂的连队，在NKVD的紧密监视下，等待着时机的再一次到来。对暴政的怒火在他心中一天天地积压，终有一天会喷薄而出——只是那时的他还不会想到，会有一个比他更年轻、更勇敢的人，抢先发出荡涤阴霾的呐喊。\n\n萨布林和他的部队已经发动了兵变；八十八旅将加入他打倒伊尔库茨克暴政的斗争。若最终能获得胜利，他们便会踏上归乡之路。"
+  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围中。虽对这些风尘仆仆的战士们本身并无兴趣，但最高主席团首脑亚戈达敏锐地觉察到，八十八旅的到来正是巩固主席团“正统性”的良机。他不仅许诺当俄罗斯情况稳定之时，支援他们还乡，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。大量走投无路北上的原东北抗联部队，流离失所的中共党员与战士，还有数量不少的蒙古、哈萨克乃至布里亚特原住民战士，被亚戈达一并塞到了八十八旅之中。\n作为主席团权威的象征，八十八旅频繁地出现在阅兵，巡逻与镇压“内部敌人”的运动中，却在远东人民真正需要他们之时被调离对抗法西斯的战场。毛岸英深知他们都已经成了亚戈达掌中的“锡兵”：任其摆布，毫无选择的自由。因而，无论是虚假的赞誉或是羞辱，他都一概接受。在NKVD的紧密监视下，毛岸英一度几乎要接受了自己的命运……但久违的重聚却令这些离散异乡的战士们共同发出了灵魂深处的希冀——回家！二十年来，故乡被侵略者残酷地蹂躏，人民被屠戮，奴役，但他们不愿再等下去了，他们要回去，去到白山黑水，黄土高坡；他们宁愿死于返乡的征途，也不愿溺死在这死气沉沉的远东。\n于是，当贝加尔湖右岸的一个青年发出反抗暴政的先声后，八十八旅迅速揭竿而起。汇聚在反抗暴政的红旗之下，战士们气势如虹，先将那暴君擒下，再踏上那漫漫还乡路……"
   #开局界面
   CountryInfo_Development_Content.11: "关注LFB最新动态"
   CountryInfo_Development_Content_desc.11: "您可以通过§Y以下§!渠道了解本§W子模组§!的相关信息\n\n也欢迎加入QQ群：§W262293916§!进行讨论\n\n请务必随时查看我们的最新动态！"
