修改标点符号

--- a/localisation/simp_chinese/replace/TNO_Turkmenistan_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Turkmenistan_l_simp_chinese.yml
@@ -1,10 +1,10 @@
 ﻿l_simp_chinese:
- TRK_communist_party: "土库曼共产党（布尔什维克）"
- TRK_communist_party_long: "土库曼共产党（布尔什维克）"
+ TRK_communist_party: "土库曼共产党"
+ TRK_communist_party_long: "土库曼共产党"
  TRK_paternalism_party: "土库曼部落会议"
  TRK_paternalism_party_long: "土库曼部落会议"
- TRK_despotism_party: "土库曼共产党（变革派）"
- TRK_despotism_party_long: "土库曼共产党（变革派）"
+ TRK_despotism_party: "土库曼共产党 - 变革派"
+ TRK_despotism_party_long: "土库曼共产党 - 变革派"
  TRK_ultranationalism_party: "伊斯兰解放党 - 土库曼支部"
  TRK_ultranationalism_party_long: "伊斯兰解放党 - 土库曼支部"
  TRK_Military_Coup: "土库曼斯坦民主党"
